[locale][en] updating the files needed for transifex

--- a/locale/en/LC_MESSAGES/basic/appendix.po
+++ b/locale/en/LC_MESSAGES/basic/appendix.po
@@ -2,14 +2,14 @@
 # Copyright (C) 2010-2021 Daniel Kastl, Vicky Vergara
 # This file is distributed under the same license as the Workshop FOSS4G
 # Argentina package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2021.
+# FIRST AUTHOR <EMAIL@ADDRESS>, 2022.
 #
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: Workshop FOSS4G Argentina 2.7\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-10-10 17:38+0000\n"
+"POT-Creation-Date: 2022-03-03 13:41-0600\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -23,7 +23,7 @@ msgid "Appendix: Basic workshop solutions"
 msgstr ""
 
 #: ../../build/docs/basic/appendix.rst:14
-msgid "Solutions to :ref:`Pedestrian routing`"
+msgid "Solutions to :doc:`pedestrian`"
 msgstr ""
 
 #: ../../build/docs/basic/appendix.rst:17
@@ -31,7 +31,7 @@ msgid "**Exercise**: 1 (**Chapter:** Pedestrian)"
 msgstr ""
 
 #: ../../build/docs/basic/appendix.rst:19
-msgid ":ref:`Exercise 1: Single pedestrian routing`"
+msgid ":ref:`basic/pedestrian:Exercise 1: Single pedestrian routing`"
 msgstr ""
 
 #: ../../build/docs/basic/appendix.rst:25
@@ -39,7 +39,9 @@ msgid "**Exercise**: 2 (**Chapter:** Pedestrian)"
 msgstr ""
 
 #: ../../build/docs/basic/appendix.rst:27
-msgid ":ref:`Exercise 2: Many Pedestrians going to the same destination`"
+msgid ""
+":ref:`basic/pedestrian:Exercise 2: Many Pedestrians going to the same "
+"destination`"
 msgstr ""
 
 #: ../../build/docs/basic/appendix.rst:33
@@ -47,7 +49,9 @@ msgid "**Exercise**: 3 (**Chapter:** Pedestrian)"
 msgstr ""
 
 #: ../../build/docs/basic/appendix.rst:35
-msgid ":ref:`Exercise 3: Many Pedestrians departing from the same location`"
+msgid ""
+":ref:`basic/pedestrian:Exercise 3: Many Pedestrians departing from the "
+"same location`"
 msgstr ""
 
 #: ../../build/docs/basic/appendix.rst:41
@@ -55,7 +59,9 @@ msgid "**Exercise**: 4 (**Chapter:** Pedestrian)"
 msgstr ""
 
 #: ../../build/docs/basic/appendix.rst:43
-msgid ":ref:`Exercise 4: Many Pedestrians going to different destinations`"
+msgid ""
+":ref:`basic/pedestrian:Exercise 4: Many Pedestrians going to different "
+"destinations`"
 msgstr ""
 
 #: ../../build/docs/basic/appendix.rst:49
@@ -64,8 +70,8 @@ msgstr ""
 
 #: ../../build/docs/basic/appendix.rst:51
 msgid ""
-":ref:`Exercise 5: Many Pedestrians going to different destinations "
-"returning aggregate costs`"
+":ref:`basic/pedestrian:Exercise 5: Many Pedestrians going to different "
+"destinations returning aggregate costs`"
 msgstr ""
 
 #: ../../build/docs/basic/appendix.rst:57
@@ -74,12 +80,12 @@ msgstr ""
 
 #: ../../build/docs/basic/appendix.rst:59
 msgid ""
-":ref:`Exercise 6: Many Pedestrians going to different destinations "
-"summarizing the total costs per departure`"
+":ref:`basic/pedestrian:Exercise 6: Many Pedestrians going to different "
+"destinations summarizing the total costs per departure`"
 msgstr ""
 
 #: ../../build/docs/basic/appendix.rst:65
-msgid "Solutions to :ref:`Vehicle routing`"
+msgid "Solutions to :doc:`vehicle`"
 msgstr ""
 
 #: ../../build/docs/basic/appendix.rst:68
@@ -87,7 +93,7 @@ msgid "**Exercise**: 1 (**Chapter:** Vehicle)"
 msgstr ""
 
 #: ../../build/docs/basic/appendix.rst:70
-msgid ":ref:`Exercise 1: Vehicle routing - going`"
+msgid ":ref:`basic/vehicle:Exercise 1: Vehicle routing - going`"
 msgstr ""
 
 #: ../../build/docs/basic/appendix.rst:76
@@ -95,7 +101,7 @@ msgid "**Exercise**: 2 (**Chapter:** Vehicle)"
 msgstr ""
 
 #: ../../build/docs/basic/appendix.rst:78
-msgid ":ref:`Exercise 2: Vehicle routing - returning`"
+msgid ":ref:`basic/vehicle:Exercise 2: Vehicle routing - returning`"
 msgstr ""
 
 #: ../../build/docs/basic/appendix.rst:84
@@ -103,7 +109,7 @@ msgid "**Exercise**: 3 (**Chapter:** Vehicle)"
 msgstr ""
 
 #: ../../build/docs/basic/appendix.rst:86
-msgid ":ref:`Exercise 3: Vehicle routing when time is money`"
+msgid ":ref:`basic/vehicle:Exercise 3: Vehicle routing when time is money`"
 msgstr ""
 
 #: ../../build/docs/basic/appendix.rst:92
@@ -111,7 +117,7 @@ msgid "**Exercise**: 4 (**Chapter:** Vehicle)"
 msgstr ""
 
 #: ../../build/docs/basic/appendix.rst:94
-msgid ":ref:`Exercise 4: Vehicle routing without penalization`"
+msgid ":ref:`basic/vehicle:Exercise 4: Vehicle routing without penalization`"
 msgstr ""
 
 #: ../../build/docs/basic/appendix.rst:100
@@ -119,11 +125,11 @@ msgid "**Exercise**: 5 (**Chapter:** Vehicle)"
 msgstr ""
 
 #: ../../build/docs/basic/appendix.rst:102
-msgid ":ref:`Exercise 5: Vehicle routing with penalization`"
+msgid ":ref:`basic/vehicle:Exercise 5: Vehicle routing with penalization`"
 msgstr ""
 
 #: ../../build/docs/basic/appendix.rst:109
-msgid "Solutions to :ref:`SQL function`"
+msgid "Solutions to :doc:`sql_function`"
 msgstr ""
 
 #: ../../build/docs/basic/appendix.rst:113
@@ -131,7 +137,7 @@ msgid "**Exercise**: 1 (**Chapter:** SQL)"
 msgstr ""
 
 #: ../../build/docs/basic/appendix.rst:115
-msgid ":ref:`Exercise 1: Creating a view for routing`"
+msgid ":ref:`basic/sql_function:Exercise 1: Creating a view for routing`"
 msgstr ""
 
 #: ../../build/docs/basic/appendix.rst:121
@@ -139,7 +145,9 @@ msgid "**Exercise**: 2 (**Chapter:** SQL)"
 msgstr ""
 
 #: ../../build/docs/basic/appendix.rst:123
-msgid ":ref:`Exercise 2: Limiting the road network within an area`"
+msgid ""
+":ref:`basic/sql_function:Exercise 2: Limiting the road network within an "
+"area`"
 msgstr ""
 
 #: ../../build/docs/basic/appendix.rst:128
@@ -147,7 +155,9 @@ msgid "**Exercise**: 3 (**Chapter:** SQL)"
 msgstr ""
 
 #: ../../build/docs/basic/appendix.rst:130
-msgid ":ref:`Exercise 3: Creating a materialized view for routing pedestrians`"
+msgid ""
+":ref:`basic/sql_function:Exercise 3: Creating a materialized view for "
+"routing pedestrians`"
 msgstr ""
 
 #: ../../build/docs/basic/appendix.rst:136
@@ -155,7 +165,7 @@ msgid "**Exercise**: 4 (**Chapter:** SQL)"
 msgstr ""
 
 #: ../../build/docs/basic/appendix.rst:138
-msgid ":ref:`Exercise 4: Testing the views for routing`"
+msgid ":ref:`basic/sql_function:Exercise 4: Testing the views for routing`"
 msgstr ""
 
 #: ../../build/docs/basic/appendix.rst:145
@@ -163,7 +173,7 @@ msgid "**Exercise**: 5 (**Chapter:** SQL)"
 msgstr ""
 
 #: ../../build/docs/basic/appendix.rst:147
-msgid ":ref:`Exercise 5: Get additional information`"
+msgid ":ref:`basic/sql_function:Exercise 5: Get additional information`"
 msgstr ""
 
 #: ../../build/docs/basic/appendix.rst:153
@@ -171,7 +181,7 @@ msgid "**Exercise**: 6 (**Chapter:** SQL)"
 msgstr ""
 
 #: ../../build/docs/basic/appendix.rst:155
-msgid ":ref:`Exercise 6: Route geometry (human readable)`"
+msgid ":ref:`basic/sql_function:Exercise 6: Route geometry (human readable)`"
 msgstr ""
 
 #: ../../build/docs/basic/appendix.rst:161
@@ -179,7 +189,7 @@ msgid "**Exercise**: 7 (**Chapter:** SQL)"
 msgstr ""
 
 #: ../../build/docs/basic/appendix.rst:163
-msgid ":ref:`Exercise 7: Route geometry (binary format)`"
+msgid ":ref:`basic/sql_function:Exercise 7: Route geometry (binary format)`"
 msgstr ""
 
 #: ../../build/docs/basic/appendix.rst:169
@@ -187,7 +197,7 @@ msgid "**Exercise**: 8 (**Chapter:** SQL)"
 msgstr ""
 
 #: ../../build/docs/basic/appendix.rst:171
-msgid ":ref:`Exercise 8: Route geometry directionality`"
+msgid ":ref:`basic/sql_function:Exercise 8: Route geometry directionality`"
 msgstr ""
 
 #: ../../build/docs/basic/appendix.rst:177
@@ -195,7 +205,7 @@ msgid "**Exercise**: 9 (**Chapter:** SQL)"
 msgstr ""
 
 #: ../../build/docs/basic/appendix.rst:179
-msgid ":ref:`Exercise 9: Using the geometry`"
+msgid ":ref:`basic/sql_function:Exercise 9: Using the geometry`"
 msgstr ""
 
 #: ../../build/docs/basic/appendix.rst:185
@@ -203,7 +213,7 @@ msgid "**Exercise**: 10 (**Chapter:** SQL)"
 msgstr ""
 
 #: ../../build/docs/basic/appendix.rst:187
-msgid ":ref:`Exercise 10: Function for an application`"
+msgid ":ref:`basic/sql_function:Exercise 10: Function for an application`"
 msgstr ""
 
 #: ../../build/docs/basic/appendix.rst:192
@@ -211,11 +221,11 @@ msgid "**Exercise**: 11 (**Chapter:** SQL)"
 msgstr ""
 
 #: ../../build/docs/basic/appendix.rst:194
-msgid ":ref:`Exercise 11: Using the function`"
+msgid ":ref:`basic/sql_function:Exercise 11: Using the function`"
 msgstr ""
 
 #: ../../build/docs/basic/appendix.rst:200
-msgid "Solutions to :ref:`pl/pgsql function`"
+msgid "Solutions to :doc:`plpgsql_function`"
 msgstr ""
 
 #: ../../build/docs/basic/appendix.rst:203
@@ -223,7 +233,7 @@ msgid "**Exercise**: 1 (**Chapter:** pl/pgsql)"
 msgstr ""
 
 #: ../../build/docs/basic/appendix.rst:205
-msgid ":ref:`Exercise 1: Number of Vertices`"
+msgid ":ref:`basic/plpgsql_function:Exercise 1: Number of Vertices`"
 msgstr ""
 
 #: ../../build/docs/basic/appendix.rst:207
@@ -252,7 +262,7 @@ msgid "**Exercise**: 2 (**Chapter:** pl/pgsql)"
 msgstr ""
 
 #: ../../build/docs/basic/appendix.rst:226
-msgid ":ref:`Exercise 2: Vertices on a table`"
+msgid ":ref:`basic/plpgsql_function:Exercise 2: Vertices on a table`"
 msgstr ""
 
 #: ../../build/docs/basic/appendix.rst:242
@@ -260,7 +270,7 @@ msgid "**Exercise**: 3 (**Chapter:** pl/pgsql)"
 msgstr ""
 
 #: ../../build/docs/basic/appendix.rst:244
-msgid ":ref:`Exercise 3: Nearest Vertex`"
+msgid ":ref:`basic/plpgsql_function:Exercise 3: Nearest Vertex`"
 msgstr ""
 
 #: ../../build/docs/basic/appendix.rst:250
@@ -283,7 +293,7 @@ msgid "**Exercise**: 4 (**Chapter:** pl/pgsql)"
 msgstr ""
 
 #: ../../build/docs/basic/appendix.rst:266
-msgid ":ref:`Exercise 4: Nearest vertex function`"
+msgid ":ref:`basic/plpgsql_function:Exercise 4: Nearest vertex function`"
 msgstr ""
 
 #: ../../build/docs/basic/appendix.rst:271
@@ -291,7 +301,7 @@ msgid "**Exercise**: 5 (**Chapter:** pl/pgsql)"
 msgstr ""
 
 #: ../../build/docs/basic/appendix.rst:273
-msgid ":ref:`Exercise 5: Test nearest vertex function`"
+msgid ":ref:`basic/plpgsql_function:Exercise 5: Test nearest vertex function`"
 msgstr ""
 
 #: ../../build/docs/basic/appendix.rst:293
@@ -299,7 +309,7 @@ msgid "**Exercise**: 6 (**Chapter:** pl/pgsql)"
 msgstr ""
 
 #: ../../build/docs/basic/appendix.rst:295
-msgid ":ref:`Exercise 6: Creating the main function`"
+msgid ":ref:`basic/plpgsql_function:Exercise 6: Creating the main function`"
 msgstr ""
 
 #: ../../build/docs/basic/appendix.rst:300
@@ -307,7 +317,7 @@ msgid "**Exercise**: 7 (**Chapter:** pl/pgsql)"
 msgstr ""
 
 #: ../../build/docs/basic/appendix.rst:302
-msgid ":ref:`Exercise 7: Using the main function`"
+msgid ":ref:`basic/plpgsql_function:Exercise 7: Using the main function`"
 msgstr ""
 
 #: ../../build/docs/basic/appendix.rst:304
