--- a/locale/en/LC_MESSAGES/basic/pedestrian.po
+++ b/locale/en/LC_MESSAGES/basic/pedestrian.po
@@ -2,14 +2,14 @@
 # Copyright (C) 2010-2021 Daniel Kastl, Vicky Vergara
 # This file is distributed under the same license as the Workshop FOSS4G
 # Argentina package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2021.
+# FIRST AUTHOR <EMAIL@ADDRESS>, 2022.
 #
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: Workshop FOSS4G Argentina 2.7\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-10-10 17:38+0000\n"
+"POT-Creation-Date: 2022-03-03 13:41-0600\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -197,7 +197,7 @@ msgid ""
 msgstr ""
 
 #: ../../build/docs/basic/pedestrian.rst:134
-msgid ":ref:`**Exercise**: 1 (**Chapter:** Pedestrian)`"
+msgid ":ref:`basic/appendix:**Exercise**: 1 (**Chapter:** Pedestrian)`"
 msgstr ""
 
 #: ../../build/docs/basic/pedestrian.rst:137
@@ -238,7 +238,7 @@ msgid "The cost to be in meters using attribute ``length_m`` (line **6**)."
 msgstr ""
 
 #: ../../build/docs/basic/pedestrian.rst:170
-msgid ":ref:`**Exercise**: 2 (**Chapter:** Pedestrian)`"
+msgid ":ref:`basic/appendix:**Exercise**: 2 (**Chapter:** Pedestrian)`"
 msgstr ""
 
 #: ../../build/docs/basic/pedestrian.rst:174
@@ -269,7 +269,7 @@ msgid ""
 msgstr ""
 
 #: ../../build/docs/basic/pedestrian.rst:197
-msgid ":ref:`**Exercise**: 3 (**Chapter:** Pedestrian)`"
+msgid ":ref:`basic/appendix:**Exercise**: 3 (**Chapter:** Pedestrian)`"
 msgstr ""
 
 #: ../../build/docs/basic/pedestrian.rst:201
@@ -307,7 +307,7 @@ msgid "Result adds the costs per destination."
 msgstr ""
 
 #: ../../build/docs/basic/pedestrian.rst:227
-msgid ":ref:`**Exercise**: 4 (**Chapter:** Pedestrian)`"
+msgid ":ref:`basic/appendix:**Exercise**: 4 (**Chapter:** Pedestrian)`"
 msgstr ""
 
 #: ../../build/docs/basic/pedestrian.rst:231
@@ -391,13 +391,13 @@ msgid "Result as aggregated costs."
 msgstr ""
 
 #: ../../build/docs/basic/pedestrian.rst:294
-msgid ":ref:`**Exercise**: 5 (**Chapter:** Pedestrian)`"
+msgid ":ref:`basic/appendix:**Exercise**: 5 (**Chapter:** Pedestrian)`"
 msgstr ""
 
 #: ../../build/docs/basic/pedestrian.rst:296
 msgid ""
-"Compare with :ref:`Exercise 4 <Exercise 4: Many Pedestrians going to "
-"different destinations>` 's note."
+"Compare with `Exercise 4: Many Pedestrians going to different "
+"destinations`_ 's note."
 msgstr ""
 
 #: ../../build/docs/basic/pedestrian.rst:300
@@ -419,7 +419,7 @@ msgid ""
 msgstr ""
 
 #: ../../build/docs/basic/pedestrian.rst:321
-msgid ":ref:`**Exercise**: 6 (**Chapter:** Pedestrian)`"
+msgid ":ref:`basic/appendix:**Exercise**: 6 (**Chapter:** Pedestrian)`"
 msgstr ""
 
 #: ../../build/docs/basic/pedestrian.rst:324
