--- a/locale/en/LC_MESSAGES/basic/sql_function.po
+++ b/locale/en/LC_MESSAGES/basic/sql_function.po
@@ -2,14 +2,14 @@
 # Copyright (C) 2010-2021 Daniel Kastl, Vicky Vergara
 # This file is distributed under the same license as the Workshop FOSS4G
 # Argentina package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2021.
+# FIRST AUTHOR <EMAIL@ADDRESS>, 2022.
 #
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: Workshop FOSS4G Argentina 2.7\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-10-10 17:38+0000\n"
+"POT-Creation-Date: 2022-03-03 14:18-0600\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -418,7 +418,7 @@ msgid "Count the rows on the view ``vehicle_net`` (line **2**)"
 msgstr ""
 
 #: ../../build/docs/basic/sql_function.rst:155
-msgid ":ref:`**Exercise**: 1 (**Chapter:** SQL)`"
+msgid ":ref:`basic/appendix:**Exercise**: 1 (**Chapter:** SQL)`"
 msgstr ""
 
 #: ../../build/docs/basic/sql_function.rst:159
@@ -471,7 +471,7 @@ msgid "Count the rows on the original ``taxi_net``"
 msgstr ""
 
 #: ../../build/docs/basic/sql_function.rst:201
-msgid ":ref:`**Exercise**: 2 (**Chapter:** SQL)`"
+msgid ":ref:`basic/appendix:**Exercise**: 2 (**Chapter:** SQL)`"
 msgstr ""
 
 #: ../../build/docs/basic/sql_function.rst:204
@@ -489,7 +489,7 @@ msgid "Exclude `motorway` and `primary` segments."
 msgstr ""
 
 #: ../../build/docs/basic/sql_function.rst:229
-msgid "Similar to :ref:`Exercise 1: Creating a view for routing`:"
+msgid "Similar to `Exercise 1: Creating a view for routing`_:"
 msgstr ""
 
 #: ../../build/docs/basic/sql_function.rst:231
@@ -507,7 +507,7 @@ msgid "Count the rows on the view ``walk_net`` (line **1**)"
 msgstr ""
 
 #: ../../build/docs/basic/sql_function.rst:253
-msgid ":ref:`**Exercise**: 3 (**Chapter:** SQL)`"
+msgid ":ref:`basic/appendix:**Exercise**: 3 (**Chapter:** SQL)`"
 msgstr ""
 
 #: ../../build/docs/basic/sql_function.rst:257
@@ -636,7 +636,7 @@ msgid ""
 msgstr ""
 
 #: ../../build/docs/basic/sql_function.rst:337
-msgid ":ref:`**Exercise**: 4 (**Chapter:** SQL)`"
+msgid ":ref:`basic/appendix:**Exercise**: 4 (**Chapter:** SQL)`"
 msgstr ""
 
 #: ../../build/docs/basic/sql_function.rst:341
@@ -652,8 +652,8 @@ msgstr ""
 
 #: ../../build/docs/basic/sql_function.rst:351
 msgid ""
-"additionally to the :ref:`Exercise 4: Testing the views for routing` "
-"results also get information found on the edges subset:"
+"additionally to the `Exercise 4: Testing the views for routing`_ results "
+"also get information found on the edges subset:"
 msgstr ""
 
 #: ../../build/docs/basic/sql_function.rst:354
@@ -666,8 +666,8 @@ msgstr ""
 
 #: ../../build/docs/basic/sql_function.rst:359
 msgid ""
-"The query from :ref:`Exercise 4: Testing the views for routing` used as a"
-" subquery named ``results``  (not highlighted lines **5** to **9**)"
+"The query from `Exercise 4: Testing the views for routing`_ used as a "
+"subquery named ``results``  (not highlighted lines **5** to **9**)"
 msgstr ""
 
 #: ../../build/docs/basic/sql_function.rst:361
@@ -695,7 +695,7 @@ msgid ""
 msgstr ""
 
 #: ../../build/docs/basic/sql_function.rst:379
-msgid ":ref:`**Exercise**: 5 (**Chapter:** SQL)`"
+msgid ":ref:`basic/appendix:**Exercise**: 5 (**Chapter:** SQL)`"
 msgstr ""
 
 #: ../../build/docs/basic/sql_function.rst:385
@@ -719,8 +719,8 @@ msgstr ""
 #: ../../build/docs/basic/sql_function.rst:446
 #: ../../build/docs/basic/sql_function.rst:505
 msgid ""
-"Additionally to the :ref:`Exercise 4: Testing the views for routing` "
-"results also get information found on the edges subset of:"
+"Additionally to the `Exercise 4: Testing the views for routing`_ results "
+"also get information found on the edges subset of:"
 msgstr ""
 
 #: ../../build/docs/basic/sql_function.rst:402
@@ -737,8 +737,8 @@ msgstr ""
 
 #: ../../build/docs/basic/sql_function.rst:410
 msgid ""
-"The query from :ref:`Exercise 4: Testing the views for routing` used as a"
-" subquery named ``results`` this time in a WITH clause. (not highlighted "
+"The query from `Exercise 4: Testing the views for routing`_ used as a "
+"subquery named ``results`` this time in a WITH clause. (not highlighted "
 "lines **2** to **6**)"
 msgstr ""
 
@@ -766,7 +766,7 @@ msgid "Like before ``LEFT JOIN`` with ``vehicle_net``. (line **11**)"
 msgstr ""
 
 #: ../../build/docs/basic/sql_function.rst:431
-msgid ":ref:`**Exercise**: 6 (**Chapter:** SQL)`"
+msgid ":ref:`basic/appendix:**Exercise**: 6 (**Chapter:** SQL)`"
 msgstr ""
 
 #: ../../build/docs/basic/sql_function.rst:436
@@ -788,7 +788,7 @@ msgid "``the_geom`` in binary format  with the name ``route_geom``"
 msgstr ""
 
 #: ../../build/docs/basic/sql_function.rst:453
-msgid "The query from :ref:`Exercise 6: Route geometry (human readable)` used;"
+msgid "The query from `Exercise 6: Route geometry (human readable)`_ used;"
 msgstr ""
 
 #: ../../build/docs/basic/sql_function.rst:457
@@ -796,7 +796,7 @@ msgid "The ``the_geom`` including the renaming (line **9**)"
 msgstr ""
 
 #: ../../build/docs/basic/sql_function.rst:469
-msgid ":ref:`**Exercise**: 7 (**Chapter:** SQL)`"
+msgid ":ref:`basic/appendix:**Exercise**: 7 (**Chapter:** SQL)`"
 msgstr ""
 
 #: ../../build/docs/basic/sql_function.rst:473
@@ -808,8 +808,8 @@ msgstr ""
 
 #: ../../build/docs/basic/sql_function.rst:481
 msgid ""
-"Inspecting the detail image of :ref:`Exercise 7: Route geometry (binary "
-"format)` there are arrows that do not match the directionality of the "
+"Inspecting the detail image of `Exercise 7: Route geometry (binary "
+"format)`_ there are arrows that do not match the directionality of the "
 "route."
 msgstr ""
 
@@ -818,8 +818,8 @@ msgstr ""
 
 #: ../../build/docs/basic/sql_function.rst:490
 msgid ""
-"Inspecting the a detail of the results of :ref:`Exercise 6: Route "
-"geometry (human readable)`"
+"Inspecting the a detail of the results of `Exercise 6: Route geometry "
+"(human readable)`_"
 msgstr ""
 
 #: ../../build/docs/basic/sql_function.rst:492
@@ -887,7 +887,7 @@ msgid "The geometry when ``node`` is the ``source`` column. (line **17**)"
 msgstr ""
 
 #: ../../build/docs/basic/sql_function.rst:539
-msgid ":ref:`**Exercise**: 8 (**Chapter:** SQL)`"
+msgid ":ref:`basic/appendix:**Exercise**: 8 (**Chapter:** SQL)`"
 msgstr ""
 
 #: ../../build/docs/basic/sql_function.rst:544
@@ -905,7 +905,7 @@ msgid ""
 msgstr ""
 
 #: ../../build/docs/basic/sql_function.rst:558
-msgid "Modify the query from :ref:`Exercise 8: Route geometry directionality`."
+msgid "Modify the query from `Exercise 8: Route geometry directionality`_."
 msgstr ""
 
 #: ../../build/docs/basic/sql_function.rst:559
@@ -953,7 +953,7 @@ msgid "Calculates the azimuth of ``route_geom``. (line **26**)"
 msgstr ""
 
 #: ../../build/docs/basic/sql_function.rst:588
-msgid ":ref:`**Exercise**: 9 (**Chapter:** SQL)`"
+msgid ":ref:`basic/appendix:**Exercise**: 9 (**Chapter:** SQL)`"
 msgstr ""
 
 #: ../../build/docs/basic/sql_function.rst:593
@@ -1051,7 +1051,7 @@ msgid ""
 msgstr ""
 
 #: ../../build/docs/basic/sql_function.rst:651
-msgid ":ref:`**Exercise**: 10 (**Chapter:** SQL)`"
+msgid ":ref:`basic/appendix:**Exercise**: 10 (**Chapter:** SQL)`"
 msgstr ""
 
 #: ../../build/docs/basic/sql_function.rst:656
@@ -1075,7 +1075,7 @@ msgid "The first parameter changes based on the view to be tested"
 msgstr ""
 
 #: ../../build/docs/basic/sql_function.rst:673
-msgid ":ref:`**Exercise**: 11 (**Chapter:** SQL)`"
+msgid ":ref:`basic/appendix:**Exercise**: 11 (**Chapter:** SQL)`"
 msgstr ""
 
 #: ../../build/docs/basic/sql_function.rst:676
