--- a/locale/en/LC_MESSAGES/basic/vehicle.po
+++ b/locale/en/LC_MESSAGES/basic/vehicle.po
@@ -2,14 +2,14 @@
 # Copyright (C) 2010-2021 Daniel Kastl, Vicky Vergara
 # This file is distributed under the same license as the Workshop FOSS4G
 # Argentina package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2021.
+# FIRST AUTHOR <EMAIL@ADDRESS>, 2022.
 #
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: Workshop FOSS4G Argentina 2.7\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-10-10 17:38+0000\n"
+"POT-Creation-Date: 2022-03-03 14:18-0600\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -179,7 +179,7 @@ msgid ""
 msgstr ""
 
 #: ../../build/docs/basic/vehicle.rst:112
-msgid ":ref:`**Exercise**: 1 (**Chapter:** Vehicle)`"
+msgid ":ref:`basic/appendix:**Exercise**: 1 (**Chapter:** Vehicle)`"
 msgstr ""
 
 #: ../../build/docs/basic/vehicle.rst:116
@@ -201,7 +201,7 @@ msgid ""
 msgstr ""
 
 #: ../../build/docs/basic/vehicle.rst:140
-msgid ":ref:`**Exercise**: 2 (**Chapter:** Vehicle)`"
+msgid ":ref:`basic/appendix:**Exercise**: 2 (**Chapter:** Vehicle)`"
 msgstr ""
 
 #: ../../build/docs/basic/vehicle.rst:142
@@ -241,11 +241,11 @@ msgid "The cost in ``$`` is ``cost_s / 3600 * 100``."
 msgstr ""
 
 #: ../../build/docs/basic/vehicle.rst:173
-msgid ":ref:`**Exercise**: 3 (**Chapter:** Vehicle)`"
+msgid ":ref:`basic/appendix:**Exercise**: 3 (**Chapter:** Vehicle)`"
 msgstr ""
 
 #: ../../build/docs/basic/vehicle.rst:176
-msgid "Comparing with :ref:`Exercise 2: Vehicle routing - returning`:"
+msgid "Comparing with `Exercise 2: Vehicle routing - returning`_:"
 msgstr ""
 
 #: ../../build/docs/basic/vehicle.rst:178
@@ -365,7 +365,7 @@ msgid ""
 msgstr ""
 
 #: ../../build/docs/basic/vehicle.rst:282
-msgid ":ref:`**Exercise**: 4 (**Chapter:** Vehicle)`"
+msgid ":ref:`basic/appendix:**Exercise**: 4 (**Chapter:** Vehicle)`"
 msgstr ""
 
 #: ../../build/docs/basic/vehicle.rst:286
@@ -426,11 +426,11 @@ msgid ""
 msgstr ""
 
 #: ../../build/docs/basic/vehicle.rst:329
-msgid ":ref:`**Exercise**: 5 (**Chapter:** Vehicle)`"
+msgid ":ref:`basic/appendix:**Exercise**: 5 (**Chapter:** Vehicle)`"
 msgstr ""
 
 #: ../../build/docs/basic/vehicle.rst:332
-msgid "Comparing with :ref:`Exercise 3: Vehicle routing when time is money`:"
+msgid "Comparing with `Exercise 3: Vehicle routing when time is money`_:"
 msgstr ""
 
 #: ../../build/docs/basic/vehicle.rst:334
