--- a/locale/en/LC_MESSAGES/un_sdg/sdg11-cities.po
+++ b/locale/en/LC_MESSAGES/un_sdg/sdg11-cities.po
@@ -2,14 +2,14 @@
 # Copyright (C) 2010-2021 Daniel Kastl, Vicky Vergara
 # This file is distributed under the same license as the Workshop FOSS4G
 # Argentina package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2021.
+# FIRST AUTHOR <EMAIL@ADDRESS>, 2022.
 #
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: Workshop FOSS4G Argentina 2.7\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-10-10 17:38+0000\n"
+"POT-Creation-Date: 2022-03-04 11:02-0600\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -113,7 +113,7 @@ msgid "Exercise 1: Create a point for the city"
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg11-cities.rst:78
-msgid ":ref:`**Exercise:** 1 (**Chapter:** SDG 11)`"
+msgid ":ref:`un_sdg/appendix:**Exercise:** 1 (**Chapter:** SDG 11)`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg11-cities.rst:80
@@ -130,13 +130,12 @@ msgstr ""
 
 #: ../../build/docs/un_sdg/sdg11-cities.rst:87
 msgid ""
-"First step is to pre-process the data obtained from :ref:`Data for "
-"Sustainable Development Goals`. This section will work the graph that is "
-"going to be used for processing. While building the graph, the data has "
-"to be inspected to determine if there is any invalid data. This is a very"
-" important step to make sure that the data is of required quality. "
-"pgRouting can also be used to do some Data Adjustments. This will be "
-"discussed in further sections."
+"First step is to pre-process the data obtained from :doc:`data`. This "
+"section will work the graph that is going to be used for processing. "
+"While building the graph, the data has to be inspected to determine if "
+"there is any invalid data. This is a very important step to make sure "
+"that the data is of required quality. pgRouting can also be used to do "
+"some Data Adjustments. This will be discussed in further sections."
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg11-cities.rst:95
@@ -211,7 +210,7 @@ msgid ""
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg11-cities.rst:192
-msgid ":ref:`**Exercise:** 6 (**Chapter:** SDG 11)`"
+msgid ":ref:`un_sdg/appendix:**Exercise:** 6 (**Chapter:** SDG 11)`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg11-cities.rst:195
@@ -226,7 +225,7 @@ msgid ""
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg11-cities.rst:209
-msgid ":ref:`**Exercise:** 7 (**Chapter:** SDG 11)`"
+msgid ":ref:`un_sdg/appendix:**Exercise:** 7 (**Chapter:** SDG 11)`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg11-cities.rst:212
@@ -290,7 +289,7 @@ msgid ""
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg11-cities.rst:269
-msgid ":ref:`**Exercise:** 8 (**Chapter:** SDG 11)`"
+msgid ":ref:`un_sdg/appendix:**Exercise:** 8 (**Chapter:** SDG 11)`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg11-cities.rst:272
@@ -319,7 +318,7 @@ msgid "Displaying the results of Buffer operation"
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg11-cities.rst:303
-msgid ":ref:`**Exercise:** 9 (**Chapter:** SDG 11)`"
+msgid ":ref:`un_sdg/appendix:**Exercise:** 9 (**Chapter:** SDG 11)`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg11-cities.rst:306
@@ -352,7 +351,7 @@ msgid ""
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg11-cities.rst:334
-msgid ":ref:`**Exercise:** 11 (**Chapter:** SDG 11)`"
+msgid ":ref:`un_sdg/appendix:**Exercise:** 11 (**Chapter:** SDG 11)`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg11-cities.rst:337
@@ -377,7 +376,7 @@ msgid ""
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg11-cities.rst:365
-msgid ":ref:`**Exercise:** 12 (**Chapter:** SDG 11)`"
+msgid ":ref:`un_sdg/appendix:**Exercise:** 12 (**Chapter:** SDG 11)`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg11-cities.rst:368
@@ -391,6 +390,5 @@ msgid ""
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg11-cities.rst:380
-msgid ":ref:`**Exercise:** 13 (**Chapter:** SDG 11)`"
+msgid ":ref:`un_sdg/appendix:**Exercise:** 13 (**Chapter:** SDG 11)`"
 msgstr ""
-
