--- a/locale/en/LC_MESSAGES/un_sdg/sdg7-energy.po
+++ b/locale/en/LC_MESSAGES/un_sdg/sdg7-energy.po
@@ -2,14 +2,14 @@
 # Copyright (C) 2010-2021 Daniel Kastl, Vicky Vergara
 # This file is distributed under the same license as the Workshop FOSS4G
 # Argentina package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2021.
+# FIRST AUTHOR <EMAIL@ADDRESS>, 2022.
 #
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: Workshop FOSS4G Argentina 2.7\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-10-10 17:38+0000\n"
+"POT-Creation-Date: 2022-03-04 11:04-0600\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -97,13 +97,13 @@ msgstr ""
 
 #: ../../build/docs/un_sdg/sdg7-energy.rst:58
 msgid ""
-"First step is to pre-process the data obtained from :ref:`Data for "
-"Sustainable Development Goals`. This section will work the graph that is "
-"going to be used for processing. While building the graph, the data has "
-"to be inspected to determine if there is any invalid data. This is a very"
-" important step to make sure that the data is of required quality. "
-"pgRouting can also be used to do some Data Adjustments. This will be "
-"discussed in further sections."
+"First step is to pre-process the data obtained from "
+":ref:`un_sdg/data:Data for Sustainable Development Goals`. This section "
+"will work the graph that is going to be used for processing. While "
+"building the graph, the data has to be inspected to determine if there is"
+" any invalid data. This is a very important step to make sure that the "
+"data is of required quality. pgRouting can also be used to do some Data "
+"Adjustments. This will be discussed in further sections."
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg7-energy.rst:66
@@ -178,7 +178,7 @@ msgid ""
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg7-energy.rst:158
-msgid ":ref:`**Exercise:** 5 (**Chapter:** SDG 7)`"
+msgid ":ref:`un_sdg/appendix:**Exercise:** 5 (**Chapter:** SDG 7)`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg7-energy.rst:161
@@ -205,8 +205,8 @@ msgstr ""
 
 #: ../../build/docs/un_sdg/sdg7-energy.rst:182
 msgid ""
-"Similar to Chapter 3 :ref:`Good Health and Well Being`, the disconnected "
-"roads have to be removed from their network to get appropriate results."
+"Similar to :doc:`sdg3-health`, the disconnected roads have to be removed "
+"from their network to get appropriate results."
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg7-energy.rst:185
@@ -242,8 +242,9 @@ msgstr ""
 
 #: ../../build/docs/un_sdg/sdg7-energy.rst:213
 msgid ""
-"if done before: :ref:`**Exercise:** 10 (**Chapter:** SDG 3)` if not done "
-"before: :ref:`**Exercise:** 6 (**Chapter:** SDG 7)`"
+"if done before: :ref:`un_sdg/appendix:**Exercise:** 10 (**Chapter:** SDG "
+"3)` if not done before: :ref:`un_sdg/appendix:**Exercise:** 6 "
+"(**Chapter:** SDG 7)`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg7-energy.rst:217
@@ -259,8 +260,9 @@ msgstr ""
 
 #: ../../build/docs/un_sdg/sdg7-energy.rst:232
 msgid ""
-"if done before: :ref:`**Exercise:** 11 (**Chapter:** SDG 3)` if not done "
-"before: :ref:`**Exercise:** 7 (**Chapter:** SDG 7)`"
+"if done before: :ref:`un_sdg/appendix:**Exercise:** 11 (**Chapter:** SDG "
+"3)` if not done before: :ref:`un_sdg/appendix:**Exercise:** 7 "
+"(**Chapter:** SDG 7)`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg7-energy.rst:236
@@ -276,8 +278,9 @@ msgstr ""
 
 #: ../../build/docs/un_sdg/sdg7-energy.rst:251
 msgid ""
-"if done before: :ref:`**Exercise:** 12 (**Chapter:** SDG 3)` if not done "
-"before: :ref:`**Exercise:** 8 (**Chapter:** SDG 7)`"
+"if done before: :ref:`un_sdg/appendix:**Exercise:** 12 (**Chapter:** SDG "
+"3)` if not done before: :ref:`un_sdg/appendix:**Exercise:** 8 "
+"(**Chapter:** SDG 7)`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg7-energy.rst:255
@@ -309,8 +312,9 @@ msgstr ""
 
 #: ../../build/docs/un_sdg/sdg7-energy.rst:284
 msgid ""
-"if done before: :ref:`**Exercise:** 13 (**Chapter:** SDG 3)` if not done "
-"before: :ref:`**Exercise:** 9 (**Chapter:** SDG 7)`"
+"if done before: :ref:`un_sdg/appendix:**Exercise:** 13 (**Chapter:** SDG "
+"3)` if not done before: :ref:`un_sdg/appendix:**Exercise:** 9 "
+"(**Chapter:** SDG 7)`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg7-energy.rst:288
@@ -372,7 +376,7 @@ msgid "``LIMIT 10`` displays the first 10 rows of the output."
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg7-energy.rst:354
-msgid ":ref:`**Exercise:** 10 (**Chapter:** SDG 7)`"
+msgid ":ref:`un_sdg/appendix:**Exercise:** 10 (**Chapter:** SDG 7)`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg7-energy.rst:358
@@ -402,7 +406,7 @@ msgid "``(length_m)/1000`` is used to fine the length in kilometres"
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg7-energy.rst:377
-msgid ":ref:`**Exercise:** 11 (**Chapter:** SDG 7)`"
+msgid ":ref:`un_sdg/appendix:**Exercise:** 11 (**Chapter:** SDG 7)`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg7-energy.rst:380
@@ -432,7 +436,7 @@ msgid ""
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg7-energy.rst:400
-msgid ":ref:`**Exercise:** 12 (**Chapter:** SDG 7)`"
+msgid ":ref:`un_sdg/appendix:**Exercise:** 12 (**Chapter:** SDG 7)`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg7-energy.rst:403
@@ -446,4 +450,3 @@ msgstr ""
 #: ../../build/docs/un_sdg/sdg7-energy.rst:405
 msgid "Finding the optimal number and locations of Electricity Transformers"
 msgstr ""
-
