--- a/locale/pot/basic/plpgsql_function.pot
+++ b/locale/pot/basic/plpgsql_function.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Workshop FOSS4G Argentina 2.7\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-10-10 17:38+0000\n"
+"POT-Creation-Date: 2022-03-03 14:18-0600\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -371,7 +371,7 @@ msgid "Similar solution as in previous query but on ``walk_net``. (lines **4** a
 msgstr ""
 
 #: ../../build/docs/basic/plpgsql_function.rst:165
-msgid ":ref:`**Exercise**: 1 (**Chapter:** pl/pgsql)`"
+msgid ":ref:`basic/appendix:**Exercise**: 1 (**Chapter:** pl/pgsql)`"
 msgstr ""
 
 #: ../../build/docs/basic/plpgsql_function.rst:168
@@ -427,7 +427,7 @@ msgid "The source and target columns are in terms of ``id`` column of ``ways_ver
 msgstr ""
 
 #: ../../build/docs/basic/plpgsql_function.rst:204
-msgid "Using the query ``id_list`` from :ref:`Exercise 1: Number of vertices`. (not highlighted lines **2** to **8**)"
+msgid "Using the query ``id_list`` from `Exercise 1: Number of vertices`_. (not highlighted lines **2** to **8**)"
 msgstr ""
 
 #: ../../build/docs/basic/plpgsql_function.rst:205
@@ -452,7 +452,7 @@ msgid "Similar solution as in previous query but on ``taxi_net``. (lines **3**, 
 msgstr ""
 
 #: ../../build/docs/basic/plpgsql_function.rst:240
-msgid ":ref:`**Exercise**: 2 (**Chapter:** pl/pgsql)`"
+msgid ":ref:`basic/appendix:**Exercise**: 2 (**Chapter:** pl/pgsql)`"
 msgstr ""
 
 #: ../../build/docs/basic/plpgsql_function.rst:243
@@ -547,7 +547,7 @@ msgid "Similar solution as in previous query but on ``walk_net_vertices_pgr``. (
 msgstr ""
 
 #: ../../build/docs/basic/plpgsql_function.rst:315
-msgid ":ref:`**Exercise**: 3 (**Chapter:** pl/pgsql)`"
+msgid ":ref:`basic/appendix:**Exercise**: 3 (**Chapter:** pl/pgsql)`"
 msgstr ""
 
 #: ../../build/docs/basic/plpgsql_function.rst:318
@@ -619,7 +619,7 @@ msgid "Using `format <ihttps://www.postgresql.org/docs/12/functions-string.html#
 msgstr ""
 
 #: ../../build/docs/basic/plpgsql_function.rst:352
-msgid "The structure of the query is similar to :ref:`Exercise 3: Nearest Vertex` solutions. (lines **12** to **16**)"
+msgid "The structure of the query is similar to `Exercise 3: Nearest Vertex`_ solutions. (lines **12** to **16**)"
 msgstr ""
 
 #: ../../build/docs/basic/plpgsql_function.rst:353
@@ -639,7 +639,7 @@ msgid "The additional parameters of function ``format``, are the parameters of t
 msgstr ""
 
 #: ../../build/docs/basic/plpgsql_function.rst:368
-msgid ":ref:`**Exercise**: 4 (**Chapter:** pl/pgsql)`"
+msgid ":ref:`basic/appendix:**Exercise**: 4 (**Chapter:** pl/pgsql)`"
 msgstr ""
 
 #: ../../build/docs/basic/plpgsql_function.rst:372
@@ -655,7 +655,7 @@ msgid "In particular use the following (lat,lon) values:  ``(-34.59, -58.4112)``
 msgstr ""
 
 #: ../../build/docs/basic/plpgsql_function.rst:380
-msgid "The point is the same as in :ref:`Exercise 3: Nearest Vertex` problem."
+msgid "The point is the same as in `Exercise 3: Nearest Vertex`_ problem."
 msgstr ""
 
 #: ../../build/docs/basic/plpgsql_function.rst:382
@@ -699,7 +699,7 @@ msgid "Similar solution as in previous query but on ``walk_net_vertices_pgr``. (
 msgstr ""
 
 #: ../../build/docs/basic/plpgsql_function.rst:443
-msgid ":ref:`**Exercise**: 5 (**Chapter:** pl/pgsql)`"
+msgid ":ref:`basic/appendix:**Exercise**: 5 (**Chapter:** pl/pgsql)`"
 msgstr ""
 
 #: ../../build/docs/basic/plpgsql_function.rst:447
@@ -719,7 +719,7 @@ msgid "Create the function ``wrk_fromAtoB``."
 msgstr ""
 
 #: ../../build/docs/basic/plpgsql_function.rst:458
-msgid "Follow the description given at :ref:`Requirements for routing from A to B`."
+msgid "Follow the description given at `Requirements for routing from A to B`_."
 msgstr ""
 
 #: ../../build/docs/basic/plpgsql_function.rst:459
@@ -727,7 +727,7 @@ msgid "Use specialized functions already created ``wrk_dijkstra`` and ``wrk_Near
 msgstr ""
 
 #: ../../build/docs/basic/plpgsql_function.rst:461
-msgid "``wrk_NearestOSM`` created on :ref:`Exercise 4: Nearest vertex function`."
+msgid "``wrk_NearestOSM`` created on `Exercise 4: Nearest vertex function`_."
 msgstr ""
 
 #: ../../build/docs/basic/plpgsql_function.rst:463
@@ -739,7 +739,7 @@ msgid "Obtains the OSM identifier needed by ``wrk_dijkstra``."
 msgstr ""
 
 #: ../../build/docs/basic/plpgsql_function.rst:466
-msgid "``wrk_dijkstra`` created on Chapter 7 :ref:`Exercise 10: Function for an application`."
+msgid "``wrk_dijkstra`` created on :ref:`basic/sql_function:Exercise 10: Function for an application`."
 msgstr ""
 
 #: ../../build/docs/basic/plpgsql_function.rst:470
@@ -827,7 +827,7 @@ msgid "The ``WARNING`` will be issued only when ``do_debug`` is true. (lines **2
 msgstr ""
 
 #: ../../build/docs/basic/plpgsql_function.rst:520
-msgid ":ref:`**Exercise**: 6 (**Chapter:** pl/pgsql)`"
+msgid ":ref:`basic/appendix:**Exercise**: 6 (**Chapter:** pl/pgsql)`"
 msgstr ""
 
 #: ../../build/docs/basic/plpgsql_function.rst:523
@@ -904,5 +904,5 @@ msgid "Show the table contents using a ``SELECT`` clause (lines **8** and **9**)
 msgstr ""
 
 #: ../../build/docs/basic/plpgsql_function.rst:592
-msgid ":ref:`**Exercise**: 7 (**Chapter:** pl/pgsql)`"
+msgid ":ref:`basic/appendix:**Exercise**: 7 (**Chapter:** pl/pgsql)`"
 msgstr ""
