--- a/locale/pot/basic/sql_function.pot
+++ b/locale/pot/basic/sql_function.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Workshop FOSS4G Argentina 2.7\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-10-10 17:38+0000\n"
+"POT-Creation-Date: 2022-03-03 14:18-0600\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -396,7 +396,7 @@ msgid "Count the rows on the view ``vehicle_net`` (line **2**)"
 msgstr ""
 
 #: ../../build/docs/basic/sql_function.rst:155
-msgid ":ref:`**Exercise**: 1 (**Chapter:** SQL)`"
+msgid ":ref:`basic/appendix:**Exercise**: 1 (**Chapter:** SQL)`"
 msgstr ""
 
 #: ../../build/docs/basic/sql_function.rst:159
@@ -440,7 +440,7 @@ msgid "Count the rows on the original ``taxi_net``"
 msgstr ""
 
 #: ../../build/docs/basic/sql_function.rst:201
-msgid ":ref:`**Exercise**: 2 (**Chapter:** SQL)`"
+msgid ":ref:`basic/appendix:**Exercise**: 2 (**Chapter:** SQL)`"
 msgstr ""
 
 #: ../../build/docs/basic/sql_function.rst:204
@@ -456,7 +456,7 @@ msgid "Exclude `motorway` and `primary` segments."
 msgstr ""
 
 #: ../../build/docs/basic/sql_function.rst:229
-msgid "Similar to :ref:`Exercise 1: Creating a view for routing`:"
+msgid "Similar to `Exercise 1: Creating a view for routing`_:"
 msgstr ""
 
 #: ../../build/docs/basic/sql_function.rst:231
@@ -472,7 +472,7 @@ msgid "Count the rows on the view ``walk_net`` (line **1**)"
 msgstr ""
 
 #: ../../build/docs/basic/sql_function.rst:253
-msgid ":ref:`**Exercise**: 3 (**Chapter:** SQL)`"
+msgid ":ref:`basic/appendix:**Exercise**: 3 (**Chapter:** SQL)`"
 msgstr ""
 
 #: ../../build/docs/basic/sql_function.rst:257
@@ -592,7 +592,7 @@ msgid "From these queries, it can be deduced that what we design for one view wi
 msgstr ""
 
 #: ../../build/docs/basic/sql_function.rst:337
-msgid ":ref:`**Exercise**: 4 (**Chapter:** SQL)`"
+msgid ":ref:`basic/appendix:**Exercise**: 4 (**Chapter:** SQL)`"
 msgstr ""
 
 #: ../../build/docs/basic/sql_function.rst:341
@@ -608,7 +608,7 @@ msgid "From the |place_3| to the |place_1|, using OSM identifiers."
 msgstr ""
 
 #: ../../build/docs/basic/sql_function.rst:351
-msgid "additionally to the :ref:`Exercise 4: Testing the views for routing` results also get information found on the edges subset:"
+msgid "additionally to the `Exercise 4: Testing the views for routing`_ results also get information found on the edges subset:"
 msgstr ""
 
 #: ../../build/docs/basic/sql_function.rst:354
@@ -620,7 +620,7 @@ msgid "``length_m``"
 msgstr ""
 
 #: ../../build/docs/basic/sql_function.rst:359
-msgid "The query from :ref:`Exercise 4: Testing the views for routing` used as a subquery named ``results``  (not highlighted lines **5** to **9**)"
+msgid "The query from `Exercise 4: Testing the views for routing`_ used as a subquery named ``results``  (not highlighted lines **5** to **9**)"
 msgstr ""
 
 #: ../../build/docs/basic/sql_function.rst:361
@@ -644,7 +644,7 @@ msgid "Has to be ``LEFT`` because there is a row with ``id = -1`` that does not 
 msgstr ""
 
 #: ../../build/docs/basic/sql_function.rst:379
-msgid ":ref:`**Exercise**: 5 (**Chapter:** SQL)`"
+msgid ":ref:`basic/appendix:**Exercise**: 5 (**Chapter:** SQL)`"
 msgstr ""
 
 #: ../../build/docs/basic/sql_function.rst:385
@@ -666,7 +666,7 @@ msgstr ""
 #: ../../build/docs/basic/sql_function.rst:399
 #: ../../build/docs/basic/sql_function.rst:446
 #: ../../build/docs/basic/sql_function.rst:505
-msgid "Additionally to the :ref:`Exercise 4: Testing the views for routing` results also get information found on the edges subset of:"
+msgid "Additionally to the `Exercise 4: Testing the views for routing`_ results also get information found on the edges subset of:"
 msgstr ""
 
 #: ../../build/docs/basic/sql_function.rst:402
@@ -679,7 +679,7 @@ msgid "``WITH`` provides a way to write auxiliary statements in larger queries. 
 msgstr ""
 
 #: ../../build/docs/basic/sql_function.rst:410
-msgid "The query from :ref:`Exercise 4: Testing the views for routing` used as a subquery named ``results`` this time in a WITH clause. (not highlighted lines **2** to **6**)"
+msgid "The query from `Exercise 4: Testing the views for routing`_ used as a subquery named ``results`` this time in a WITH clause. (not highlighted lines **2** to **6**)"
 msgstr ""
 
 #: ../../build/docs/basic/sql_function.rst:412
@@ -704,7 +704,7 @@ msgid "Like before ``LEFT JOIN`` with ``vehicle_net``. (line **11**)"
 msgstr ""
 
 #: ../../build/docs/basic/sql_function.rst:431
-msgid ":ref:`**Exercise**: 6 (**Chapter:** SQL)`"
+msgid ":ref:`basic/appendix:**Exercise**: 6 (**Chapter:** SQL)`"
 msgstr ""
 
 #: ../../build/docs/basic/sql_function.rst:436
@@ -725,7 +725,7 @@ msgid "``the_geom`` in binary format  with the name ``route_geom``"
 msgstr ""
 
 #: ../../build/docs/basic/sql_function.rst:453
-msgid "The query from :ref:`Exercise 6: Route geometry (human readable)` used;"
+msgid "The query from `Exercise 6: Route geometry (human readable)`_ used;"
 msgstr ""
 
 #: ../../build/docs/basic/sql_function.rst:457
@@ -733,7 +733,7 @@ msgid "The ``the_geom`` including the renaming (line **9**)"
 msgstr ""
 
 #: ../../build/docs/basic/sql_function.rst:469
-msgid ":ref:`**Exercise**: 7 (**Chapter:** SQL)`"
+msgid ":ref:`basic/appendix:**Exercise**: 7 (**Chapter:** SQL)`"
 msgstr ""
 
 #: ../../build/docs/basic/sql_function.rst:473
@@ -745,7 +745,7 @@ msgid "From |place_3| to the |place_1|"
 msgstr ""
 
 #: ../../build/docs/basic/sql_function.rst:481
-msgid "Inspecting the detail image of :ref:`Exercise 7: Route geometry (binary format)` there are arrows that do not match the directionality of the route."
+msgid "Inspecting the detail image of `Exercise 7: Route geometry (binary format)`_ there are arrows that do not match the directionality of the route."
 msgstr ""
 
 #: ../../build/docs/basic/sql_function.rst:None
@@ -753,7 +753,7 @@ msgid "detail"
 msgstr ""
 
 #: ../../build/docs/basic/sql_function.rst:490
-msgid "Inspecting the a detail of the results of :ref:`Exercise 6: Route geometry (human readable)`"
+msgid "Inspecting the a detail of the results of `Exercise 6: Route geometry (human readable)`_"
 msgstr ""
 
 #: ../../build/docs/basic/sql_function.rst:492
@@ -809,7 +809,7 @@ msgid "The geometry when ``node`` is the ``source`` column. (line **17**)"
 msgstr ""
 
 #: ../../build/docs/basic/sql_function.rst:539
-msgid ":ref:`**Exercise**: 8 (**Chapter:** SQL)`"
+msgid ":ref:`basic/appendix:**Exercise**: 8 (**Chapter:** SQL)`"
 msgstr ""
 
 #: ../../build/docs/basic/sql_function.rst:544
@@ -825,7 +825,7 @@ msgid "There are many geometry functions in PostGIS, the workshop already covere
 msgstr ""
 
 #: ../../build/docs/basic/sql_function.rst:558
-msgid "Modify the query from :ref:`Exercise 8: Route geometry directionality`."
+msgid "Modify the query from `Exercise 8: Route geometry directionality`_."
 msgstr ""
 
 #: ../../build/docs/basic/sql_function.rst:559
@@ -869,7 +869,7 @@ msgid "Calculates the azimuth of ``route_geom``. (line **26**)"
 msgstr ""
 
 #: ../../build/docs/basic/sql_function.rst:588
-msgid ":ref:`**Exercise**: 9 (**Chapter:** SQL)`"
+msgid ":ref:`basic/appendix:**Exercise**: 9 (**Chapter:** SQL)`"
 msgstr ""
 
 #: ../../build/docs/basic/sql_function.rst:593
@@ -957,7 +957,7 @@ msgid "The ``JOIN`` with ``ways`` is necessary, as the views are subset of ``way
 msgstr ""
 
 #: ../../build/docs/basic/sql_function.rst:651
-msgid ":ref:`**Exercise**: 10 (**Chapter:** SQL)`"
+msgid ":ref:`basic/appendix:**Exercise**: 10 (**Chapter:** SQL)`"
 msgstr ""
 
 #: ../../build/docs/basic/sql_function.rst:656
@@ -981,7 +981,7 @@ msgid "The first parameter changes based on the view to be tested"
 msgstr ""
 
 #: ../../build/docs/basic/sql_function.rst:673
-msgid ":ref:`**Exercise**: 11 (**Chapter:** SQL)`"
+msgid ":ref:`basic/appendix:**Exercise**: 11 (**Chapter:** SQL)`"
 msgstr ""
 
 #: ../../build/docs/basic/sql_function.rst:676
