--- a/locale/pot/un_sdg/sdg11-cities.pot
+++ b/locale/pot/un_sdg/sdg11-cities.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Workshop FOSS4G Argentina 2.7\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-10-10 17:38+0000\n"
+"POT-Creation-Date: 2022-03-04 11:02-0600\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -94,7 +94,7 @@ msgid "Exercise 1: Create a point for the city"
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg11-cities.rst:78
-msgid ":ref:`**Exercise:** 1 (**Chapter:** SDG 11)`"
+msgid ":ref:`un_sdg/appendix:**Exercise:** 1 (**Chapter:** SDG 11)`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg11-cities.rst:80
@@ -106,7 +106,7 @@ msgid "Pre-processing waterways data"
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg11-cities.rst:87
-msgid "First step is to pre-process the data obtained from :ref:`Data for Sustainable Development Goals`. This section will work the graph that is going to be used for processing. While building the graph, the data has to be inspected to determine if there is any invalid data. This is a very important step to make sure that the data is of required quality. pgRouting can also be used to do some Data Adjustments. This will be discussed in further sections."
+msgid "First step is to pre-process the data obtained from :doc:`data`. This section will work the graph that is going to be used for processing. While building the graph, the data has to be inspected to determine if there is any invalid data. This is a very important step to make sure that the data is of required quality. pgRouting can also be used to do some Data Adjustments. This will be discussed in further sections."
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg11-cities.rst:95
@@ -166,7 +166,7 @@ msgid "The importance of counting the information on this workshop is to make su
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg11-cities.rst:192
-msgid ":ref:`**Exercise:** 6 (**Chapter:** SDG 11)`"
+msgid ":ref:`un_sdg/appendix:**Exercise:** 6 (**Chapter:** SDG 11)`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg11-cities.rst:195
@@ -178,7 +178,7 @@ msgid "This exercise focusses only the areas in the mainland, where if it rains 
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg11-cities.rst:209
-msgid ":ref:`**Exercise:** 7 (**Chapter:** SDG 11)`"
+msgid ":ref:`un_sdg/appendix:**Exercise:** 7 (**Chapter:** SDG 11)`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg11-cities.rst:212
@@ -222,7 +222,7 @@ msgid "With component id stored in both vertex and edge table of waterways, lets
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg11-cities.rst:269
-msgid ":ref:`**Exercise:** 8 (**Chapter:** SDG 11)`"
+msgid ":ref:`un_sdg/appendix:**Exercise:** 8 (**Chapter:** SDG 11)`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg11-cities.rst:272
@@ -248,7 +248,7 @@ msgid "Displaying the results of Buffer operation"
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg11-cities.rst:303
-msgid ":ref:`**Exercise:** 9 (**Chapter:** SDG 11)`"
+msgid ":ref:`un_sdg/appendix:**Exercise:** 9 (**Chapter:** SDG 11)`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg11-cities.rst:306
@@ -272,7 +272,7 @@ msgid "Output shows the distinct component numbers which lie in the buffer zone 
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg11-cities.rst:334
-msgid ":ref:`**Exercise:** 11 (**Chapter:** SDG 11)`"
+msgid ":ref:`un_sdg/appendix:**Exercise:** 11 (**Chapter:** SDG 11)`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg11-cities.rst:337
@@ -288,7 +288,7 @@ msgid "This will give us the requires area, where if it rains, the city will be 
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg11-cities.rst:365
-msgid ":ref:`**Exercise:** 12 (**Chapter:** SDG 11)`"
+msgid ":ref:`un_sdg/appendix:**Exercise:** 12 (**Chapter:** SDG 11)`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg11-cities.rst:368
@@ -300,5 +300,5 @@ msgid "Multiple polygons that are obtained can also be merged using ``ST_Union``
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg11-cities.rst:380
-msgid ":ref:`**Exercise:** 13 (**Chapter:** SDG 11)`"
+msgid ":ref:`un_sdg/appendix:**Exercise:** 13 (**Chapter:** SDG 11)`"
 msgstr ""
