--- a/locale/pot/un_sdg/sdg3-health.pot
+++ b/locale/pot/un_sdg/sdg3-health.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Workshop FOSS4G Argentina 2.7\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-10-10 17:38+0000\n"
+"POT-Creation-Date: 2022-03-04 11:09-0600\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -97,7 +97,7 @@ msgid "Pre-processing roads and buildings data"
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg3-health.rst:61
-msgid "First step is to pre-process the data obtained from :ref:`Data for Sustainable Development Goals`. This section will work the graph that is going to be used for processing. While building the graph, the data has to be inspected to determine if there is any invalid data. This is a very important step to make sure that the data is of required quality. pgRouting can also be used to do some Data Adjustments. This will be discussed in further sections."
+msgid "First step is to pre-process the data obtained from :ref:`un_sdg/data:Data for Sustainable Development Goals`. This section will work the graph that is going to be used for processing. While building the graph, the data has to be inspected to determine if there is any invalid data. This is a very important step to make sure that the data is of required quality. pgRouting can also be used to do some Data Adjustments. This will be discussed in further sections."
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg3-health.rst:69
@@ -162,7 +162,7 @@ msgid "The importance of counting the information on this workshop is to make su
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg3-health.rst:181
-msgid ":ref:`**Exercise:** 5 (**Chapter:** SDG 3)`"
+msgid ":ref:`un_sdg/appendix:**Exercise:** 5 (**Chapter:** SDG 3)`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg3-health.rst:183
@@ -186,7 +186,7 @@ msgid "Add a spatial column named ``poly_geom`` to the table ``buildings_ways`` 
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg3-health.rst:209
-msgid ":ref:`**Exercise:** 6 (**Chapter:** SDG 3)`"
+msgid ":ref:`un_sdg/appendix:**Exercise:** 6 (**Chapter:** SDG 3)`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg3-health.rst:212
@@ -198,7 +198,7 @@ msgid "``ST_NumPoints`` is used to find the number of points on a geometry. Also
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg3-health.rst:227
-msgid ":ref:`**Exercise:** 7 (**Chapter:** SDG 3)`"
+msgid ":ref:`un_sdg/appendix:**Exercise:** 7 (**Chapter:** SDG 3)`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg3-health.rst:230
@@ -210,7 +210,7 @@ msgid "``ST_MakePolygons`` is used to make the polygons. This step stores the ge
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg3-health.rst:243
-msgid ":ref:`**Exercise:** 8 (**Chapter:** SDG 3)`"
+msgid ":ref:`un_sdg/appendix:**Exercise:** 8 (**Chapter:** SDG 3)`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg3-health.rst:246
@@ -234,7 +234,7 @@ msgid "``ST_Area`` is used to calculate area of polygons. Area is stored in the 
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg3-health.rst:271
-msgid ":ref:`**Exercise:** 9 (**Chapter:** SDG 3)`"
+msgid ":ref:`un_sdg/appendix:**Exercise:** 9 (**Chapter:** SDG 3)`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg3-health.rst:274
@@ -291,7 +291,7 @@ msgid "This will store the component number of each edge in the table. Now, the 
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg3-health.rst:342
-msgid ":ref:`**Exercise:** 10 (**Chapter:** SDG 3)`"
+msgid ":ref:`un_sdg/appendix:**Exercise:** 10 (**Chapter:** SDG 3)`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg3-health.rst:345
@@ -303,7 +303,7 @@ msgid "This query selects all the components which are not equal to the componen
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg3-health.rst:359
-msgid ":ref:`**Exercise:** 11 (**Chapter:** SDG 3)`"
+msgid ":ref:`un_sdg/appendix:**Exercise:** 11 (**Chapter:** SDG 3)`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg3-health.rst:362
@@ -315,7 +315,7 @@ msgid "Find the road vertices of these components which belong to those componen
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg3-health.rst:376
-msgid ":ref:`**Exercise:** 12 (**Chapter:** SDG 3)`"
+msgid ":ref:`un_sdg/appendix:**Exercise:** 12 (**Chapter:** SDG 3)`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg3-health.rst:379
@@ -339,7 +339,7 @@ msgid "The following query uses the output of Step 4 to remove the vertices of t
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg3-health.rst:408
-msgid ":ref:`**Exercise:** 13 (**Chapter:** SDG 3)`"
+msgid ":ref:`un_sdg/appendix:**Exercise:** 13 (**Chapter:** SDG 3)`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg3-health.rst:411
@@ -419,7 +419,7 @@ msgid "In line 3, Pedestrian speed is assumed to be as ``1 m/s``. As ``time`` = 
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg3-health.rst:491
-msgid "In line 7, ``tag_id = '318'``  as 318 is the tag_id of hospital in the configuration file of buildings. Reference for Tag ID : :ref:`Appendix`"
+msgid "In line 7, ``tag_id = '318'``  as 318 is the tag_id of hospital in the configuration file of buildings. Reference for Tag ID : :ref:`un_sdg/data:Appendix`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg3-health.rst:493
@@ -436,7 +436,7 @@ msgid "``LIMIT 10`` displays the first 10 rows of the output."
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg3-health.rst:506
-msgid ":ref:`**Exercise:** 15 (**Chapter:** SDG 3)`"
+msgid ":ref:`un_sdg/appendix:**Exercise:** 15 (**Chapter:** SDG 3)`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg3-health.rst:508
@@ -452,7 +452,7 @@ msgid "The edges which are near to to hospital should also be selected in the ro
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg3-health.rst:538
-msgid ":ref:`**Exercise:** 16 (**Chapter:** SDG 3)`"
+msgid ":ref:`un_sdg/appendix:**Exercise:** 16 (**Chapter:** SDG 3)`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg3-health.rst:540
@@ -500,7 +500,7 @@ msgid "Very Dense: A large sized residential building."
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg3-health.rst:572
-msgid "Reference: :ref:`Appendix`"
+msgid "Reference: :ref:`un_sdg/data:Appendix`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg3-health.rst:574
@@ -524,7 +524,7 @@ msgid "3. Use the ``population`` function to store the population in the new col
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg3-health.rst:608
-msgid ":ref:`**Exercise:** 17 (**Chapter:** SDG 3)`"
+msgid ":ref:`un_sdg/appendix:**Exercise:** 17 (**Chapter:** SDG 3)`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg3-health.rst:612
@@ -548,7 +548,7 @@ msgid "Store the edge id of the closest edge in the new column of ``buildings_wa
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg3-health.rst:641
-msgid ":ref:`**Exercise:** 18 (**Chapter:** SDG 3)`"
+msgid ":ref:`un_sdg/appendix:**Exercise:** 18 (**Chapter:** SDG 3)`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg3-health.rst:644
@@ -572,7 +572,7 @@ msgid "Verify is the population is stored using the following query."
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg3-health.rst:683
-msgid ":ref:`**Exercise:** 19 (**Chapter:** SDG 3)`"
+msgid ":ref:`un_sdg/appendix:**Exercise:** 19 (**Chapter:** SDG 3)`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg3-health.rst:686
@@ -580,9 +580,9 @@ msgid "Exercise 20: Finding total population"
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg3-health.rst:687
-msgid "Final step is to find the total population served by the hospital based on travel-time. Use the query from :ref:`Exercise 16: Generalising the served roads` as a subquery to get all the edges in the roads served. Note that ``s.population`` is added in line 14 which gives the population. After getting the population for each edge/road, use ``sum()`` to get the total population which is dependant on the hospital."
+msgid "Final step is to find the total population served by the hospital based on travel-time. Use the query from `Exercise 16: Generalising the served roads`_ as a subquery to get all the edges in the roads served. Note that ``s.population`` is added in line 14 which gives the population. After getting the population for each edge/road, use ``sum()`` to get the total population which is dependant on the hospital."
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg3-health.rst:701
-msgid ":ref:`**Exercise:** 20 (**Chapter:** SDG 3)`"
+msgid ":ref:`un_sdg/appendix:**Exercise:** 20 (**Chapter:** SDG 3)`"
 msgstr ""
