--- a/locale/pot/un_sdg/sdg7-energy.pot
+++ b/locale/pot/un_sdg/sdg7-energy.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Workshop FOSS4G Argentina 2.7\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-10-10 17:38+0000\n"
+"POT-Creation-Date: 2022-03-04 11:04-0600\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -78,7 +78,7 @@ msgid "Pre-processing roads data"
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg7-energy.rst:58
-msgid "First step is to pre-process the data obtained from :ref:`Data for Sustainable Development Goals`. This section will work the graph that is going to be used for processing. While building the graph, the data has to be inspected to determine if there is any invalid data. This is a very important step to make sure that the data is of required quality. pgRouting can also be used to do some Data Adjustments. This will be discussed in further sections."
+msgid "First step is to pre-process the data obtained from :ref:`un_sdg/data:Data for Sustainable Development Goals`. This section will work the graph that is going to be used for processing. While building the graph, the data has to be inspected to determine if there is any invalid data. This is a very important step to make sure that the data is of required quality. pgRouting can also be used to do some Data Adjustments. This will be discussed in further sections."
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg7-energy.rst:66
@@ -138,7 +138,7 @@ msgid "The importance of counting the information on this workshop is to make su
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg7-energy.rst:158
-msgid ":ref:`**Exercise:** 5 (**Chapter:** SDG 7)`"
+msgid ":ref:`un_sdg/appendix:**Exercise:** 5 (**Chapter:** SDG 7)`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg7-energy.rst:161
@@ -158,7 +158,7 @@ msgid "`pgr_connectedComponents Documentation <https://docs.pgrouting.org/3.1/en
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg7-energy.rst:182
-msgid "Similar to Chapter 3 :ref:`Good Health and Well Being`, the disconnected roads have to be removed from their network to get appropriate results."
+msgid "Similar to :doc:`sdg3-health`, the disconnected roads have to be removed from their network to get appropriate results."
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg7-energy.rst:185
@@ -186,7 +186,7 @@ msgid "This will store the component number of each edge in the table. Now, the 
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg7-energy.rst:213
-msgid "if done before: :ref:`**Exercise:** 10 (**Chapter:** SDG 3)` if not done before: :ref:`**Exercise:** 6 (**Chapter:** SDG 7)`"
+msgid "if done before: :ref:`un_sdg/appendix:**Exercise:** 10 (**Chapter:** SDG 3)` if not done before: :ref:`un_sdg/appendix:**Exercise:** 6 (**Chapter:** SDG 7)`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg7-energy.rst:217
@@ -198,7 +198,7 @@ msgid "This query selects all the components which are not equal to the componen
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg7-energy.rst:232
-msgid "if done before: :ref:`**Exercise:** 11 (**Chapter:** SDG 3)` if not done before: :ref:`**Exercise:** 7 (**Chapter:** SDG 7)`"
+msgid "if done before: :ref:`un_sdg/appendix:**Exercise:** 11 (**Chapter:** SDG 3)` if not done before: :ref:`un_sdg/appendix:**Exercise:** 7 (**Chapter:** SDG 7)`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg7-energy.rst:236
@@ -210,7 +210,7 @@ msgid "Find the road vertices if these components which belong to those componen
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg7-energy.rst:251
-msgid "if done before: :ref:`**Exercise:** 12 (**Chapter:** SDG 3)` if not done before: :ref:`**Exercise:** 8 (**Chapter:** SDG 7)`"
+msgid "if done before: :ref:`un_sdg/appendix:**Exercise:** 12 (**Chapter:** SDG 3)` if not done before: :ref:`un_sdg/appendix:**Exercise:** 8 (**Chapter:** SDG 7)`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg7-energy.rst:255
@@ -234,7 +234,7 @@ msgid "The following query uses the output of Step 4 to remove the vertices of t
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg7-energy.rst:284
-msgid "if done before: :ref:`**Exercise:** 13 (**Chapter:** SDG 3)` if not done before: :ref:`**Exercise:** 9 (**Chapter:** SDG 7)`"
+msgid "if done before: :ref:`un_sdg/appendix:**Exercise:** 13 (**Chapter:** SDG 3)` if not done before: :ref:`un_sdg/appendix:**Exercise:** 9 (**Chapter:** SDG 7)`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg7-energy.rst:288
@@ -282,7 +282,7 @@ msgid "``LIMIT 10`` displays the first 10 rows of the output."
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg7-energy.rst:354
-msgid ":ref:`**Exercise:** 10 (**Chapter:** SDG 7)`"
+msgid ":ref:`un_sdg/appendix:**Exercise:** 10 (**Chapter:** SDG 7)`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg7-energy.rst:358
@@ -307,7 +307,7 @@ msgid "``(length_m)/1000`` is used to fine the length in kilometres"
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg7-energy.rst:377
-msgid ":ref:`**Exercise:** 11 (**Chapter:** SDG 7)`"
+msgid ":ref:`un_sdg/appendix:**Exercise:** 11 (**Chapter:** SDG 7)`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg7-energy.rst:380
@@ -335,7 +335,7 @@ msgid "Length of minimum spanning tree is about half of the length of total road
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg7-energy.rst:400
-msgid ":ref:`**Exercise:** 12 (**Chapter:** SDG 7)`"
+msgid ":ref:`un_sdg/appendix:**Exercise:** 12 (**Chapter:** SDG 7)`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg7-energy.rst:403
