--- a/locale/en/LC_MESSAGES/advanced/chapter-12.po
+++ b/locale/en/LC_MESSAGES/advanced/chapter-12.po
@@ -2,14 +2,14 @@
 # Copyright (C) 2010-2021 Daniel Kastl, Vicky Vergara
 # This file is distributed under the same license as the Workshop FOSS4G
 # Argentina package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2021.
+# FIRST AUTHOR <EMAIL@ADDRESS>, 2022.
 #
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: Workshop FOSS4G Argentina 2.7\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-10-10 17:38+0000\n"
+"POT-Creation-Date: 2022-03-04 09:41-0600\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -235,7 +235,9 @@ msgid "Additional columns are for analyzing the topology."
 msgstr ""
 
 #: ../../build/docs/advanced/chapter-12.rst:165
-msgid "Now we are ready for our first routing query with :ref:`pgr_dijkstra`"
+msgid ""
+"Now we are ready for our first routing query with "
+":ref:`basic/pedestrian:pgr_dijkstra`"
 msgstr ""
 
 #: ../../build/docs/advanced/chapter-12.rst:170
