--- a/locale/en/LC_MESSAGES/basic/plpgsql_function.po
+++ b/locale/en/LC_MESSAGES/basic/plpgsql_function.po
@@ -2,14 +2,14 @@
 # Copyright (C) 2010-2021 Daniel Kastl, Vicky Vergara
 # This file is distributed under the same license as the Workshop FOSS4G
 # Argentina package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2021.
+# FIRST AUTHOR <EMAIL@ADDRESS>, 2022.
 #
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: Workshop FOSS4G Argentina 2.7\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-10-10 17:38+0000\n"
+"POT-Creation-Date: 2022-03-03 14:18-0600\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -396,7 +396,7 @@ msgid ""
 msgstr ""
 
 #: ../../build/docs/basic/plpgsql_function.rst:165
-msgid ":ref:`**Exercise**: 1 (**Chapter:** pl/pgsql)`"
+msgid ":ref:`basic/appendix:**Exercise**: 1 (**Chapter:** pl/pgsql)`"
 msgstr ""
 
 #: ../../build/docs/basic/plpgsql_function.rst:168
@@ -455,8 +455,8 @@ msgstr ""
 
 #: ../../build/docs/basic/plpgsql_function.rst:204
 msgid ""
-"Using the query ``id_list`` from :ref:`Exercise 1: Number of vertices`. "
-"(not highlighted lines **2** to **8**)"
+"Using the query ``id_list`` from `Exercise 1: Number of vertices`_. (not "
+"highlighted lines **2** to **8**)"
 msgstr ""
 
 #: ../../build/docs/basic/plpgsql_function.rst:205
@@ -488,7 +488,7 @@ msgid ""
 msgstr ""
 
 #: ../../build/docs/basic/plpgsql_function.rst:240
-msgid ":ref:`**Exercise**: 2 (**Chapter:** pl/pgsql)`"
+msgid ":ref:`basic/appendix:**Exercise**: 2 (**Chapter:** pl/pgsql)`"
 msgstr ""
 
 #: ../../build/docs/basic/plpgsql_function.rst:243
@@ -596,7 +596,7 @@ msgid ""
 msgstr ""
 
 #: ../../build/docs/basic/plpgsql_function.rst:315
-msgid ":ref:`**Exercise**: 3 (**Chapter:** pl/pgsql)`"
+msgid ":ref:`basic/appendix:**Exercise**: 3 (**Chapter:** pl/pgsql)`"
 msgstr ""
 
 #: ../../build/docs/basic/plpgsql_function.rst:318
@@ -675,8 +675,8 @@ msgstr ""
 
 #: ../../build/docs/basic/plpgsql_function.rst:352
 msgid ""
-"The structure of the query is similar to :ref:`Exercise 3: Nearest "
-"Vertex` solutions. (lines **12** to **16**)"
+"The structure of the query is similar to `Exercise 3: Nearest Vertex`_ "
+"solutions. (lines **12** to **16**)"
 msgstr ""
 
 #: ../../build/docs/basic/plpgsql_function.rst:353
@@ -698,7 +698,7 @@ msgid ""
 msgstr ""
 
 #: ../../build/docs/basic/plpgsql_function.rst:368
-msgid ":ref:`**Exercise**: 4 (**Chapter:** pl/pgsql)`"
+msgid ":ref:`basic/appendix:**Exercise**: 4 (**Chapter:** pl/pgsql)`"
 msgstr ""
 
 #: ../../build/docs/basic/plpgsql_function.rst:372
@@ -714,7 +714,7 @@ msgid "In particular use the following (lat,lon) values:  ``(-34.59, -58.4112)``
 msgstr ""
 
 #: ../../build/docs/basic/plpgsql_function.rst:380
-msgid "The point is the same as in :ref:`Exercise 3: Nearest Vertex` problem."
+msgid "The point is the same as in `Exercise 3: Nearest Vertex`_ problem."
 msgstr ""
 
 #: ../../build/docs/basic/plpgsql_function.rst:382
@@ -768,7 +768,7 @@ msgid ""
 msgstr ""
 
 #: ../../build/docs/basic/plpgsql_function.rst:443
-msgid ":ref:`**Exercise**: 5 (**Chapter:** pl/pgsql)`"
+msgid ":ref:`basic/appendix:**Exercise**: 5 (**Chapter:** pl/pgsql)`"
 msgstr ""
 
 #: ../../build/docs/basic/plpgsql_function.rst:447
@@ -790,9 +790,7 @@ msgid "Create the function ``wrk_fromAtoB``."
 msgstr ""
 
 #: ../../build/docs/basic/plpgsql_function.rst:458
-msgid ""
-"Follow the description given at :ref:`Requirements for routing from A to "
-"B`."
+msgid "Follow the description given at `Requirements for routing from A to B`_."
 msgstr ""
 
 #: ../../build/docs/basic/plpgsql_function.rst:459
@@ -802,7 +800,7 @@ msgid ""
 msgstr ""
 
 #: ../../build/docs/basic/plpgsql_function.rst:461
-msgid "``wrk_NearestOSM`` created on :ref:`Exercise 4: Nearest vertex function`."
+msgid "``wrk_NearestOSM`` created on `Exercise 4: Nearest vertex function`_."
 msgstr ""
 
 #: ../../build/docs/basic/plpgsql_function.rst:463
@@ -815,8 +813,8 @@ msgstr ""
 
 #: ../../build/docs/basic/plpgsql_function.rst:466
 msgid ""
-"``wrk_dijkstra`` created on Chapter 7 :ref:`Exercise 10: Function for an "
-"application`."
+"``wrk_dijkstra`` created on :ref:`basic/sql_function:Exercise 10: "
+"Function for an application`."
 msgstr ""
 
 #: ../../build/docs/basic/plpgsql_function.rst:470
@@ -916,7 +914,7 @@ msgid ""
 msgstr ""
 
 #: ../../build/docs/basic/plpgsql_function.rst:520
-msgid ":ref:`**Exercise**: 6 (**Chapter:** pl/pgsql)`"
+msgid ":ref:`basic/appendix:**Exercise**: 6 (**Chapter:** pl/pgsql)`"
 msgstr ""
 
 #: ../../build/docs/basic/plpgsql_function.rst:523
@@ -996,6 +994,6 @@ msgid "Show the table contents using a ``SELECT`` clause (lines **8** and **9**)
 msgstr ""
 
 #: ../../build/docs/basic/plpgsql_function.rst:592
-msgid ":ref:`**Exercise**: 7 (**Chapter:** pl/pgsql)`"
+msgid ":ref:`basic/appendix:**Exercise**: 7 (**Chapter:** pl/pgsql)`"
 msgstr ""
 
