--- a/locale/en/LC_MESSAGES/un_sdg/sdg3-health.po
+++ b/locale/en/LC_MESSAGES/un_sdg/sdg3-health.po
@@ -2,14 +2,14 @@
 # Copyright (C) 2010-2021 Daniel Kastl, Vicky Vergara
 # This file is distributed under the same license as the Workshop FOSS4G
 # Argentina package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2021.
+# FIRST AUTHOR <EMAIL@ADDRESS>, 2022.
 #
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: Workshop FOSS4G Argentina 2.7\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-10-10 17:38+0000\n"
+"POT-Creation-Date: 2022-03-04 11:09-0600\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -115,13 +115,13 @@ msgstr ""
 
 #: ../../build/docs/un_sdg/sdg3-health.rst:61
 msgid ""
-"First step is to pre-process the data obtained from :ref:`Data for "
-"Sustainable Development Goals`. This section will work the graph that is "
-"going to be used for processing. While building the graph, the data has "
-"to be inspected to determine if there is any invalid data. This is a very"
-" important step to make sure that the data is of required quality. "
-"pgRouting can also be used to do some Data Adjustments. This will be "
-"discussed in further sections."
+"First step is to pre-process the data obtained from "
+":ref:`un_sdg/data:Data for Sustainable Development Goals`. This section "
+"will work the graph that is going to be used for processing. While "
+"building the graph, the data has to be inspected to determine if there is"
+" any invalid data. This is a very important step to make sure that the "
+"data is of required quality. pgRouting can also be used to do some Data "
+"Adjustments. This will be discussed in further sections."
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg3-health.rst:69
@@ -207,7 +207,7 @@ msgid ""
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg3-health.rst:181
-msgid ":ref:`**Exercise:** 5 (**Chapter:** SDG 3)`"
+msgid ":ref:`un_sdg/appendix:**Exercise:** 5 (**Chapter:** SDG 3)`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg3-health.rst:183
@@ -235,7 +235,7 @@ msgid ""
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg3-health.rst:209
-msgid ":ref:`**Exercise:** 6 (**Chapter:** SDG 3)`"
+msgid ":ref:`un_sdg/appendix:**Exercise:** 6 (**Chapter:** SDG 3)`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg3-health.rst:212
@@ -252,7 +252,7 @@ msgid ""
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg3-health.rst:227
-msgid ":ref:`**Exercise:** 7 (**Chapter:** SDG 3)`"
+msgid ":ref:`un_sdg/appendix:**Exercise:** 7 (**Chapter:** SDG 3)`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg3-health.rst:230
@@ -266,7 +266,7 @@ msgid ""
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg3-health.rst:243
-msgid ":ref:`**Exercise:** 8 (**Chapter:** SDG 3)`"
+msgid ":ref:`un_sdg/appendix:**Exercise:** 8 (**Chapter:** SDG 3)`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg3-health.rst:246
@@ -294,7 +294,7 @@ msgid ""
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg3-health.rst:271
-msgid ":ref:`**Exercise:** 9 (**Chapter:** SDG 3)`"
+msgid ":ref:`un_sdg/appendix:**Exercise:** 9 (**Chapter:** SDG 3)`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg3-health.rst:274
@@ -374,7 +374,7 @@ msgid ""
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg3-health.rst:342
-msgid ":ref:`**Exercise:** 10 (**Chapter:** SDG 3)`"
+msgid ":ref:`un_sdg/appendix:**Exercise:** 10 (**Chapter:** SDG 3)`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg3-health.rst:345
@@ -389,7 +389,7 @@ msgid ""
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg3-health.rst:359
-msgid ":ref:`**Exercise:** 11 (**Chapter:** SDG 3)`"
+msgid ":ref:`un_sdg/appendix:**Exercise:** 11 (**Chapter:** SDG 3)`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg3-health.rst:362
@@ -404,7 +404,7 @@ msgid ""
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg3-health.rst:376
-msgid ":ref:`**Exercise:** 12 (**Chapter:** SDG 3)`"
+msgid ":ref:`un_sdg/appendix:**Exercise:** 12 (**Chapter:** SDG 3)`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg3-health.rst:379
@@ -435,7 +435,7 @@ msgid ""
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg3-health.rst:408
-msgid ":ref:`**Exercise:** 13 (**Chapter:** SDG 3)`"
+msgid ":ref:`un_sdg/appendix:**Exercise:** 13 (**Chapter:** SDG 3)`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg3-health.rst:411
@@ -541,7 +541,8 @@ msgstr ""
 #: ../../build/docs/un_sdg/sdg3-health.rst:491
 msgid ""
 "In line 7, ``tag_id = '318'``  as 318 is the tag_id of hospital in the "
-"configuration file of buildings. Reference for Tag ID : :ref:`Appendix`"
+"configuration file of buildings. Reference for Tag ID : "
+":ref:`un_sdg/data:Appendix`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg3-health.rst:493
@@ -560,7 +561,7 @@ msgid "``LIMIT 10`` displays the first 10 rows of the output."
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg3-health.rst:506
-msgid ":ref:`**Exercise:** 15 (**Chapter:** SDG 3)`"
+msgid ":ref:`un_sdg/appendix:**Exercise:** 15 (**Chapter:** SDG 3)`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg3-health.rst:508
@@ -589,7 +590,7 @@ msgid ""
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg3-health.rst:538
-msgid ":ref:`**Exercise:** 16 (**Chapter:** SDG 3)`"
+msgid ":ref:`un_sdg/appendix:**Exercise:** 16 (**Chapter:** SDG 3)`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg3-health.rst:540
@@ -656,7 +657,7 @@ msgid "Very Dense: A large sized residential building."
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg3-health.rst:572
-msgid "Reference: :ref:`Appendix`"
+msgid "Reference: :ref:`un_sdg/data:Appendix`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg3-health.rst:574
@@ -689,7 +690,7 @@ msgid ""
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg3-health.rst:608
-msgid ":ref:`**Exercise:** 17 (**Chapter:** SDG 3)`"
+msgid ":ref:`un_sdg/appendix:**Exercise:** 17 (**Chapter:** SDG 3)`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg3-health.rst:612
@@ -718,7 +719,7 @@ msgid ""
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg3-health.rst:641
-msgid ":ref:`**Exercise:** 18 (**Chapter:** SDG 3)`"
+msgid ":ref:`un_sdg/appendix:**Exercise:** 18 (**Chapter:** SDG 3)`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg3-health.rst:644
@@ -746,7 +747,7 @@ msgid "Verify is the population is stored using the following query."
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg3-health.rst:683
-msgid ":ref:`**Exercise:** 19 (**Chapter:** SDG 3)`"
+msgid ":ref:`un_sdg/appendix:**Exercise:** 19 (**Chapter:** SDG 3)`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg3-health.rst:686
@@ -756,14 +757,13 @@ msgstr ""
 #: ../../build/docs/un_sdg/sdg3-health.rst:687
 msgid ""
 "Final step is to find the total population served by the hospital based "
-"on travel-time. Use the query from :ref:`Exercise 16: Generalising the "
-"served roads` as a subquery to get all the edges in the roads served. "
-"Note that ``s.population`` is added in line 14 which gives the "
-"population. After getting the population for each edge/road, use "
-"``sum()`` to get the total population which is dependant on the hospital."
+"on travel-time. Use the query from `Exercise 16: Generalising the served "
+"roads`_ as a subquery to get all the edges in the roads served. Note that"
+" ``s.population`` is added in line 14 which gives the population. After "
+"getting the population for each edge/road, use ``sum()`` to get the total"
+" population which is dependant on the hospital."
 msgstr ""
 
 #: ../../build/docs/un_sdg/sdg3-health.rst:701
-msgid ":ref:`**Exercise:** 20 (**Chapter:** SDG 3)`"
+msgid ":ref:`un_sdg/appendix:**Exercise:** 20 (**Chapter:** SDG 3)`"
 msgstr ""
-
