--- a/locale/pot/basic/pedestrian.pot
+++ b/locale/pot/basic/pedestrian.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Workshop FOSS4G Argentina 2.7\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-10-10 17:38+0000\n"
+"POT-Creation-Date: 2022-03-03 13:41-0600\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -164,7 +164,7 @@ msgid "From a pedestrian perspective the graph is ``undirected`` (line **11**), 
 msgstr ""
 
 #: ../../build/docs/basic/pedestrian.rst:134
-msgid ":ref:`**Exercise**: 1 (**Chapter:** Pedestrian)`"
+msgid ":ref:`basic/appendix:**Exercise**: 1 (**Chapter:** Pedestrian)`"
 msgstr ""
 
 #: ../../build/docs/basic/pedestrian.rst:137
@@ -200,7 +200,7 @@ msgid "The cost to be in meters using attribute ``length_m`` (line **6**)."
 msgstr ""
 
 #: ../../build/docs/basic/pedestrian.rst:170
-msgid ":ref:`**Exercise**: 2 (**Chapter:** Pedestrian)`"
+msgid ":ref:`basic/appendix:**Exercise**: 2 (**Chapter:** Pedestrian)`"
 msgstr ""
 
 #: ../../build/docs/basic/pedestrian.rst:174
@@ -228,7 +228,7 @@ msgid "The cost to be in seconds, with a walking speed ``s = 1.3 m/s`` and ``t =
 msgstr ""
 
 #: ../../build/docs/basic/pedestrian.rst:197
-msgid ":ref:`**Exercise**: 3 (**Chapter:** Pedestrian)`"
+msgid ":ref:`basic/appendix:**Exercise**: 3 (**Chapter:** Pedestrian)`"
 msgstr ""
 
 #: ../../build/docs/basic/pedestrian.rst:201
@@ -262,7 +262,7 @@ msgid "Result adds the costs per destination."
 msgstr ""
 
 #: ../../build/docs/basic/pedestrian.rst:227
-msgid ":ref:`**Exercise**: 4 (**Chapter:** Pedestrian)`"
+msgid ":ref:`basic/appendix:**Exercise**: 4 (**Chapter:** Pedestrian)`"
 msgstr ""
 
 #: ../../build/docs/basic/pedestrian.rst:231
@@ -332,11 +332,11 @@ msgid "Result as aggregated costs."
 msgstr ""
 
 #: ../../build/docs/basic/pedestrian.rst:294
-msgid ":ref:`**Exercise**: 5 (**Chapter:** Pedestrian)`"
+msgid ":ref:`basic/appendix:**Exercise**: 5 (**Chapter:** Pedestrian)`"
 msgstr ""
 
 #: ../../build/docs/basic/pedestrian.rst:296
-msgid "Compare with :ref:`Exercise 4 <Exercise 4: Many Pedestrians going to different destinations>` 's note."
+msgid "Compare with `Exercise 4: Many Pedestrians going to different destinations`_ 's note."
 msgstr ""
 
 #: ../../build/docs/basic/pedestrian.rst:300
@@ -352,7 +352,7 @@ msgid "The cost to be in minutes, with a walking speed s = 1.3 m/s and t = d/s (
 msgstr ""
 
 #: ../../build/docs/basic/pedestrian.rst:321
-msgid ":ref:`**Exercise**: 6 (**Chapter:** Pedestrian)`"
+msgid ":ref:`basic/appendix:**Exercise**: 6 (**Chapter:** Pedestrian)`"
 msgstr ""
 
 #: ../../build/docs/basic/pedestrian.rst:324
