--- a/locale/pot/basic/vehicle.pot
+++ b/locale/pot/basic/vehicle.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Workshop FOSS4G Argentina 2.7\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-10-10 17:38+0000\n"
+"POT-Creation-Date: 2022-03-03 14:18-0600\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -158,7 +158,7 @@ msgid "Use ``cost`` (line **6**) and ``reverse_cost`` (line **7**) columns, whic
 msgstr ""
 
 #: ../../build/docs/basic/vehicle.rst:112
-msgid ":ref:`**Exercise**: 1 (**Chapter:** Vehicle)`"
+msgid ":ref:`basic/appendix:**Exercise**: 1 (**Chapter:** Vehicle)`"
 msgstr ""
 
 #: ../../build/docs/basic/vehicle.rst:116
@@ -179,7 +179,7 @@ msgid "The vehicle is going from vertex |id_1| (line **10**) to |id_3| (line **1
 msgstr ""
 
 #: ../../build/docs/basic/vehicle.rst:140
-msgid ":ref:`**Exercise**: 2 (**Chapter:** Vehicle)`"
+msgid ":ref:`basic/appendix:**Exercise**: 2 (**Chapter:** Vehicle)`"
 msgstr ""
 
 #: ../../build/docs/basic/vehicle.rst:142
@@ -216,11 +216,11 @@ msgid "The cost in ``$`` is ``cost_s / 3600 * 100``."
 msgstr ""
 
 #: ../../build/docs/basic/vehicle.rst:173
-msgid ":ref:`**Exercise**: 3 (**Chapter:** Vehicle)`"
+msgid ":ref:`basic/appendix:**Exercise**: 3 (**Chapter:** Vehicle)`"
 msgstr ""
 
 #: ../../build/docs/basic/vehicle.rst:176
-msgid "Comparing with :ref:`Exercise 2: Vehicle routing - returning`:"
+msgid "Comparing with `Exercise 2: Vehicle routing - returning`_:"
 msgstr ""
 
 #: ../../build/docs/basic/vehicle.rst:178
@@ -324,7 +324,7 @@ msgid "The :code:`configuration` table is linked with the :code:`ways` table by 
 msgstr ""
 
 #: ../../build/docs/basic/vehicle.rst:282
-msgid ":ref:`**Exercise**: 4 (**Chapter:** Vehicle)`"
+msgid ":ref:`basic/appendix:**Exercise**: 4 (**Chapter:** Vehicle)`"
 msgstr ""
 
 #: ../../build/docs/basic/vehicle.rst:286
@@ -380,11 +380,11 @@ msgid "The :code:`configuration` table is linked with the :code:`ways` table by 
 msgstr ""
 
 #: ../../build/docs/basic/vehicle.rst:329
-msgid ":ref:`**Exercise**: 5 (**Chapter:** Vehicle)`"
+msgid ":ref:`basic/appendix:**Exercise**: 5 (**Chapter:** Vehicle)`"
 msgstr ""
 
 #: ../../build/docs/basic/vehicle.rst:332
-msgid "Comparing with :ref:`Exercise 3: Vehicle routing when time is money`:"
+msgid "Comparing with `Exercise 3: Vehicle routing when time is money`_:"
 msgstr ""
 
 #: ../../build/docs/basic/vehicle.rst:334
