--- a/locale/pot/un_sdg/appendix.pot
+++ b/locale/pot/un_sdg/appendix.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Workshop FOSS4G Argentina 2.7\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-10-10 17:38+0000\n"
+"POT-Creation-Date: 2022-03-04 09:53-0600\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -29,7 +29,7 @@ msgid "**Exercise:** 5 (**Chapter:** SDG 3)"
 msgstr ""
 
 #: ../../build/docs/un_sdg/appendix.rst:19
-msgid ":ref:`Exercise 5: Counting the number of Roads and Buildings`"
+msgid ":ref:`un_sdg/sdg3-health:Exercise 5: Counting the number of Roads and Buildings`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/appendix.rst:25
@@ -37,7 +37,7 @@ msgid "**Exercise:** 6 (**Chapter:** SDG 3)"
 msgstr ""
 
 #: ../../build/docs/un_sdg/appendix.rst:27
-msgid ":ref:`Exercise 6: Add a spatial column to the table`"
+msgid ":ref:`un_sdg/sdg3-health:Exercise 6: Add a spatial column to the table`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/appendix.rst:32
@@ -45,7 +45,7 @@ msgid "**Exercise:** 7 (**Chapter:** SDG 3)"
 msgstr ""
 
 #: ../../build/docs/un_sdg/appendix.rst:35
-msgid ":ref:`Exercise 7: Removing the polygons with less than 4 points`"
+msgid ":ref:`un_sdg/sdg3-health:Exercise 7: Removing the polygons with less than 4 points`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/appendix.rst:41
@@ -53,7 +53,7 @@ msgid "**Exercise:** 8 (**Chapter:** SDG 3)"
 msgstr ""
 
 #: ../../build/docs/un_sdg/appendix.rst:44
-msgid ":ref:`Exercise 8: Creating the polygons`"
+msgid ":ref:`un_sdg/sdg3-health:Exercise 8: Creating the polygons`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/appendix.rst:49
@@ -61,7 +61,7 @@ msgid "**Exercise:** 9 (**Chapter:** SDG 3)"
 msgstr ""
 
 #: ../../build/docs/un_sdg/appendix.rst:52
-msgid ":ref:`Exercise 9: Calculating the area`"
+msgid ":ref:`un_sdg/sdg3-health:Exercise 9: Calculating the area`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/appendix.rst:58
@@ -69,7 +69,7 @@ msgid "**Exercise:** 10 (**Chapter:** SDG 3)"
 msgstr ""
 
 #: ../../build/docs/un_sdg/appendix.rst:60
-msgid ":ref:`Exercise 10: Find the Component ID for Road vertices`"
+msgid ":ref:`un_sdg/sdg3-health:Exercise 10: Find the Component ID for Road vertices`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/appendix.rst:66
@@ -77,7 +77,7 @@ msgid "**Exercise:** 11 (**Chapter:** SDG 3)"
 msgstr ""
 
 #: ../../build/docs/un_sdg/appendix.rst:69
-msgid ":ref:`Exercise 11: Finding the components which are to be removed`"
+msgid ":ref:`un_sdg/sdg3-health:Exercise 11: Finding the components which are to be removed`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/appendix.rst:75
@@ -85,7 +85,7 @@ msgid "**Exercise:** 12 (**Chapter:** SDG 3)"
 msgstr ""
 
 #: ../../build/docs/un_sdg/appendix.rst:78
-msgid ":ref:`Exercise 12: Finding the road vertices of these components`"
+msgid ":ref:`un_sdg/sdg3-health:Exercise 12: Finding the road vertices of these components`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/appendix.rst:84
@@ -93,7 +93,7 @@ msgid "**Exercise:** 13 (**Chapter:** SDG 3)"
 msgstr ""
 
 #: ../../build/docs/un_sdg/appendix.rst:87
-msgid ":ref:`Exercise 13: Removing the unwanted edges and vertices`"
+msgid ":ref:`un_sdg/sdg3-health:Exercise 13: Removing the unwanted edges and vertices`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/appendix.rst:93
@@ -101,7 +101,7 @@ msgid "**Exercise:** 15 (**Chapter:** SDG 3)"
 msgstr ""
 
 #: ../../build/docs/un_sdg/appendix.rst:96
-msgid ":ref:`Exercise 15: Finding the served roads using pgr_drivingDistance`"
+msgid ":ref:`un_sdg/sdg3-health:Exercise 15: Finding the served roads using pgr_drivingDistance`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/appendix.rst:101
@@ -109,7 +109,7 @@ msgid "**Exercise:** 16 (**Chapter:** SDG 3)"
 msgstr ""
 
 #: ../../build/docs/un_sdg/appendix.rst:104
-msgid ":ref:`Exercise 16: Generalising the served roads`"
+msgid ":ref:`un_sdg/sdg3-health:Exercise 16: Generalising the served roads`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/appendix.rst:110
@@ -117,7 +117,7 @@ msgid "**Exercise:** 17 (**Chapter:** SDG 3)"
 msgstr ""
 
 #: ../../build/docs/un_sdg/appendix.rst:113
-msgid ":ref:`Exercise 17: Estimating the population of buildings`"
+msgid ":ref:`un_sdg/sdg3-health:Exercise 17: Estimating the population of buildings`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/appendix.rst:119
@@ -125,7 +125,7 @@ msgid "**Exercise:** 18 (**Chapter:** SDG 3)"
 msgstr ""
 
 #: ../../build/docs/un_sdg/appendix.rst:122
-msgid ":ref:`Exercise 18: Finding the nearest roads to store the population`"
+msgid ":ref:`un_sdg/sdg3-health:Exercise 18: Finding the nearest roads to store the population`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/appendix.rst:128
@@ -133,7 +133,7 @@ msgid "**Exercise:** 19 (**Chapter:** SDG 3)"
 msgstr ""
 
 #: ../../build/docs/un_sdg/appendix.rst:131
-msgid ":ref:`Exercise 19: Storing the population in the roads`"
+msgid ":ref:`un_sdg/sdg3-health:Exercise 19: Storing the population in the roads`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/appendix.rst:137
@@ -141,7 +141,7 @@ msgid "**Exercise:** 20 (**Chapter:** SDG 3)"
 msgstr ""
 
 #: ../../build/docs/un_sdg/appendix.rst:140
-msgid ":ref:`Exercise 20: Finding total population`"
+msgid ":ref:`un_sdg/sdg3-health:Exercise 20: Finding total population`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/appendix.rst:146
@@ -153,7 +153,7 @@ msgid "**Exercise:** 5 (**Chapter:** SDG 7)"
 msgstr ""
 
 #: ../../build/docs/un_sdg/appendix.rst:152
-msgid ":ref:`Exercise 5: Counting the number of Roads`"
+msgid ":ref:`un_sdg/sdg7-energy:Exercise 5: Counting the number of Roads`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/appendix.rst:158
@@ -161,7 +161,7 @@ msgid "**Exercise:** 6 (**Chapter:** SDG 7)"
 msgstr ""
 
 #: ../../build/docs/un_sdg/appendix.rst:161
-msgid ":ref:`Exercise 6: Find the Component ID for Road vertices`"
+msgid ":ref:`un_sdg/sdg7-energy:Exercise 6: Find the Component ID for Road vertices`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/appendix.rst:167
@@ -169,7 +169,7 @@ msgid "**Exercise:** 7 (**Chapter:** SDG 7)"
 msgstr ""
 
 #: ../../build/docs/un_sdg/appendix.rst:170
-msgid ":ref:`Exercise 7: Finding the components which are to be removed`"
+msgid ":ref:`un_sdg/sdg7-energy:Exercise 7: Finding the components which are to be removed`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/appendix.rst:176
@@ -177,7 +177,7 @@ msgid "**Exercise:** 8 (**Chapter:** SDG 7)"
 msgstr ""
 
 #: ../../build/docs/un_sdg/appendix.rst:179
-msgid ":ref:`Exercise 8: Finding the road vertices of these components`"
+msgid ":ref:`un_sdg/sdg7-energy:Exercise 8: Finding the road vertices of these components`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/appendix.rst:184
@@ -185,7 +185,7 @@ msgid "**Exercise:** 9 (**Chapter:** SDG 7)"
 msgstr ""
 
 #: ../../build/docs/un_sdg/appendix.rst:187
-msgid ":ref:`Exercise 9: Removing the unwanted edges and vertices`"
+msgid ":ref:`un_sdg/sdg7-energy:Exercise 9: Removing the unwanted edges and vertices`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/appendix.rst:192
@@ -193,7 +193,7 @@ msgid "**Exercise:** 10 (**Chapter:** SDG 7)"
 msgstr ""
 
 #: ../../build/docs/un_sdg/appendix.rst:195
-msgid ":ref:`Exercise 10: Find the minimum spanning tree`"
+msgid ":ref:`un_sdg/sdg7-energy:Exercise 10: Find the minimum spanning tree`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/appendix.rst:200
@@ -201,7 +201,7 @@ msgid "**Exercise:** 11 (**Chapter:** SDG 7)"
 msgstr ""
 
 #: ../../build/docs/un_sdg/appendix.rst:203
-msgid ":ref:`Exercise 11: Compute total length of material required in km`"
+msgid ":ref:`un_sdg/sdg7-energy:Exercise 11: Compute total length of material required in km`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/appendix.rst:208
@@ -209,7 +209,7 @@ msgid "**Exercise:** 12 (**Chapter:** SDG 7)"
 msgstr ""
 
 #: ../../build/docs/un_sdg/appendix.rst:210
-msgid ":ref:`Exercise 12: Compute total length of roads`"
+msgid ":ref:`un_sdg/sdg7-energy:Exercise 12: Compute total length of roads`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/appendix.rst:215
@@ -221,7 +221,7 @@ msgid "**Exercise:** 1 (**Chapter:** SDG 11)"
 msgstr ""
 
 #: ../../build/docs/un_sdg/appendix.rst:220
-msgid ":ref:`Exercise 1: Create a point for the city`"
+msgid ":ref:`un_sdg/sdg11-cities:Exercise 1: Create a point for the city`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/appendix.rst:226
@@ -229,7 +229,7 @@ msgid "**Exercise:** 6 (**Chapter:** SDG 11)"
 msgstr ""
 
 #: ../../build/docs/un_sdg/appendix.rst:229
-msgid ":ref:`Exercise 6: Counting the number of Waterways`"
+msgid ":ref:`un_sdg/sdg11-cities:Exercise 6: Counting the number of Waterways`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/appendix.rst:235
@@ -237,7 +237,7 @@ msgid "**Exercise:** 7 (**Chapter:** SDG 11)"
 msgstr ""
 
 #: ../../build/docs/un_sdg/appendix.rst:238
-msgid ":ref:`Exercise 7: Removing the Rivers which are in swamps`"
+msgid ":ref:`un_sdg/sdg11-cities:Exercise 7: Removing the Rivers which are in swamps`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/appendix.rst:244
@@ -245,7 +245,7 @@ msgid "**Exercise:** 8 (**Chapter:** SDG 11)"
 msgstr ""
 
 #: ../../build/docs/un_sdg/appendix.rst:246
-msgid ":ref:`Exercise 8: Get the Connected Components of Waterways`"
+msgid ":ref:`un_sdg/sdg11-cities:Exercise 8: Get the Connected Components of Waterways`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/appendix.rst:252
@@ -253,7 +253,7 @@ msgid "**Exercise:** 9 (**Chapter:** SDG 11)"
 msgstr ""
 
 #: ../../build/docs/un_sdg/appendix.rst:255
-msgid ":ref:`Exercise 9: Creating buffer around the city`"
+msgid ":ref:`un_sdg/sdg11-cities:Exercise 9: Creating buffer around the city`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/appendix.rst:260
@@ -261,7 +261,7 @@ msgid "**Exercise:** 11 (**Chapter:** SDG 11)"
 msgstr ""
 
 #: ../../build/docs/un_sdg/appendix.rst:262
-msgid ":ref:`Exercise 11: Finding the components intersecting the buffer`"
+msgid ":ref:`un_sdg/sdg11-cities:Exercise 11: Finding the components intersecting the buffer`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/appendix.rst:268
@@ -269,7 +269,7 @@ msgid "**Exercise:** 12 (**Chapter:** SDG 11)"
 msgstr ""
 
 #: ../../build/docs/un_sdg/appendix.rst:271
-msgid ":ref:`Exercise 12: Get the rain zones`"
+msgid ":ref:`un_sdg/sdg11-cities:Exercise 12: Get the rain zones`"
 msgstr ""
 
 #: ../../build/docs/un_sdg/appendix.rst:276
@@ -277,5 +277,5 @@ msgid "**Exercise:** 13 (**Chapter:** SDG 11)"
 msgstr ""
 
 #: ../../build/docs/un_sdg/appendix.rst:278
-msgid ":ref:`Exercise 13: Create a union of rain zones`"
+msgid ":ref:`un_sdg/sdg11-cities:Exercise 13: Create a union of rain zones`"
 msgstr ""
